// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generated output snapshots > counter.glim generates byte-identical output 1`] = `
"; Generated by Glimmer from program CounterToy.
; Do not edit: regenerate from the Glimmer source.

        .org    $4000

; --- system API (placeholder addresses) ---
API_ReadKeys      .equ $8000
API_DrawChar      .equ $8003
API_FlushDisplay  .equ $8006
API_InitDisplay   .equ $8009

; --- key bits ---
KEY_1_BIT         .equ 0
KEY_2_BIT         .equ 1

; --- change flags ---
CHG_COUNT_BIT     .equ 0
CHG_INCPRESSED_BIT .equ 1
CHG_DECPRESSED_BIT .equ 2
CHG_COUNT         .equ %00000001
CHG_INCPRESSED    .equ %00000010
CHG_DECPRESSED    .equ %00000100

; --- block trigger masks ---
GlimDep_ApplyIncrement__B0 .equ CHG_INCPRESSED
GlimDep_ApplyDecrement__B0 .equ CHG_DECPRESSED
GlimDep_DrawCount__B0 .equ CHG_COUNT

; --- state storage ---
Count:            .db 0
IncPressed:       .db 0
DecPressed:       .db 0
PrevKeys:         .db 0
Changed0:         .db %00000001   ; flags dispatch tests
Raised0:          .db 0   ; raises for later phases this frame
Next0:            .db 0   ; raises deferred to next frame

; --- runtime loop ---
@Start:
        call    API_InitDisplay
MainLoop:
        call    __PollBindings
        call    __RunLogicEffects
        call    __MergeRaised
        call    __RunRenderEffects
        call    API_FlushDisplay
        call    __EndFrame
        jp      MainLoop

; --- input polling ---
@__PollBindings:
        call    API_ReadKeys
        ld      b,a

        ld      a,(PrevKeys)          ; rising edge = now AND NOT before
        cpl
        and     b
        ld      c,a

        ld      a,b
        ld      (PrevKeys),a

        bit     KEY_1_BIT,c
        jr      z,__NoPulse_IncPressed_KEY_1
        ld      a,1
        ld      (IncPressed),a
        ld      a,(Changed0)
        or      CHG_INCPRESSED
        ld      (Changed0),a
__NoPulse_IncPressed_KEY_1:
        bit     KEY_2_BIT,c
        jr      z,__NoPulse_DecPressed_KEY_2
        ld      a,1
        ld      (DecPressed),a
        ld      a,(Changed0)
        or      CHG_DECPRESSED
        ld      (Changed0),a
__NoPulse_DecPressed_KEY_2:
        ret

; --- logic phase dispatch ---
@__RunLogicEffects:
        ld      a,(Changed0)
        and     GlimDep_ApplyIncrement__B0
        jr      z,GlimSkip_ApplyIncrement
        call    Glim_ApplyIncrement
GlimSkip_ApplyIncrement:
        ld      a,(Changed0)
        and     GlimDep_ApplyDecrement__B0
        jr      z,GlimSkip_ApplyDecrement
        call    Glim_ApplyDecrement
GlimSkip_ApplyDecrement:
        ret

; --- render phase dispatch ---
@__RunRenderEffects:
        ld      a,(Changed0)
        and     GlimDep_DrawCount__B0
        jr      z,GlimSkip_DrawCount
        call    Glim_DrawCount
GlimSkip_DrawCount:
        ret

; --- phase boundary: deliver same-frame raises ---
@__MergeRaised:
        ld      a,(Changed0)
        ld      b,a
        ld      a,(Raised0)
        or      b
        ld      (Changed0),a
        xor     a
        ld      (Raised0),a
        ret

; --- logic block ApplyIncrement ---
@Glim_ApplyIncrement:
    ld hl,Count
    inc (hl)
    ld a,(hl)
    cp 10
    jr c,_done
    xor a
    ld (hl),a
_done:
        ld      a,(Raised0)          ; deliver to later phases this frame
        or      CHG_COUNT
        ld      (Raised0),a
        ret

; --- logic block ApplyDecrement ---
@Glim_ApplyDecrement:
    ld hl,Count
    ld a,(hl)
    or a
    jr nz,_not_zero
    ld a,9
    ld (hl),a
    jr _done
_not_zero:
    dec (hl)
_done:
        ld      a,(Raised0)          ; deliver to later phases this frame
        or      CHG_COUNT
        ld      (Raised0),a
        ret

; --- render block DrawCount ---
@Glim_DrawCount:
    ld a,(Count)
    add a,'0'
    ld b,10
    ld c,5
    call API_DrawChar
        ret

; --- frame rollover ---
@__EndFrame:
        xor     a
        ld      (IncPressed),a
        ld      (DecPressed),a
        ld      (Raised0),a
        ld      a,(Next0)            ; deferred raises become next frame
        ld      (Changed0),a
        xor     a
        ld      (Next0),a
        ret
"
`;

exports[`generated output snapshots > dot.glim generates byte-identical output 1`] = `
"; Generated by Glimmer from program Dot.
; Do not edit: regenerate from the Glimmer source.
;
; Register contracts (the ;! comments) are inferred and injected
; by AZM during the Glimmer build, using the same parameters
; Debug80 uses: --contracts --rc error --reg-profile mon3.

        .org    $4000

; --- TEC-1G / MON-3 platform ---
ApiScanKeys       .equ 16
ApiRandom         .equ 49   ; A = random byte, destroys B
PortDigits        .equ $01
PortSegs          .equ $02
PortRow           .equ $05
PortRed           .equ $06
PortGreen         .equ $F8
PortBlue          .equ $F9
SpeakerBit        .equ $80
ScanDwellPeriod   .equ 255
COLOR_RED         .equ $01
COLOR_GREEN       .equ $02
COLOR_BLUE        .equ $04
COLOR_YELLOW      .equ COLOR_RED + COLOR_GREEN
COLOR_CYAN        .equ COLOR_GREEN + COLOR_BLUE
COLOR_MAGENTA     .equ COLOR_RED + COLOR_BLUE
COLOR_WHITE       .equ $07

; --- MON-3 key codes ---
KEY_2             .equ $02
KEY_8             .equ $08
KEY_4             .equ $04
KEY_6             .equ $06

; --- change flags ---
CHG_DOTX_BIT      .equ 0
CHG_DOTY_BIT      .equ 1
CHG_UP_BIT        .equ 2
CHG_DOWN_BIT      .equ 3
CHG_LEFT_BIT      .equ 4
CHG_RIGHT_BIT     .equ 5
CHG_DOTX          .equ %00000001
CHG_DOTY          .equ %00000010
CHG_UP            .equ %00000100
CHG_DOWN          .equ %00001000
CHG_LEFT          .equ %00010000
CHG_RIGHT         .equ %00100000

; --- block trigger masks ---
GlimDep_MoveUp__B0 .equ CHG_UP
GlimDep_MoveDown__B0 .equ CHG_DOWN
GlimDep_MoveLeft__B0 .equ CHG_LEFT
GlimDep_MoveRight__B0 .equ CHG_RIGHT
GlimDep_DrawDot__B0 .equ CHG_DOTX + CHG_DOTY

; --- state storage ---
DotX:             .db 3
DotY:             .db 3
Up:               .db 0
Down:             .db 0
Left:             .db 0
Right:            .db 0
Glim_HeldKey:     .db $FF
Glim_HeldCount:   .db 0
Changed0:         .db %00000010   ; flags dispatch tests
Raised0:          .db 0   ; raises for later phases this frame
Next0:            .db 0   ; raises deferred to next frame
Framebuffer:      .ds 32           ; 8 rows x R,G,B,aux
SpeakerPort:      .db 0
SoundTimer:       .db 0
SndDivReload:     .db 0
SndDivCount:      .db 0
HudScanIndex:     .db 0
HudSegBuffer:     .ds 6

; --- HUD data tables ---
HudMaskTbl:
        .db     $20, $10, $08, $04, $02, $01
HudGlyphTbl:
        .db     $EB, $28, $CD, $AD, $2E, $A7, $E7, $29
        .db     $EF, $2F, $6F, $E6, $C3, $EC, $C7, $47

; --- runtime loop ---
@Start:
        call    FbClear
        call    HudBlankDig
MainLoop:
        call    ScanFrame            ; show one full frame, then blank
        call    __PollBindings       ; game work runs in the blank window
        call    __RunLogicEffects
        call    __MergeRaised
        call    __RunRenderEffects
        call    __EndFrame
        jp      MainLoop

; --- input polling (MON-3 _scanKeys) ---
@__PollBindings:
        ld      c,ApiScanKeys
        rst     $10
        jr      z,__PollKeyDown
        ld      a,$FF                ; no key: disarm autorepeat
        ld      (Glim_HeldKey),a
        ret
__PollKeyDown:
        ld      b,a                  ; B = key code (DE unsafe: matrix kbd)
        jr      c,__PollNewPress
        ld      a,(Glim_HeldKey)     ; held: autorepeat armed for this key?
        cp      b
        ret     nz
        ld      a,(Glim_HeldCount)
        dec     a
        ld      (Glim_HeldCount),a
        ret     nz
        ld      a,b
        cp      KEY_2
        jr      nz,__HeldNext_Up_KEY_2
        ld      a,8
        ld      (Glim_HeldCount),a
        ld      a,1
        ld      (Up),a
        ld      a,(Changed0)
        or      CHG_UP
        ld      (Changed0),a
        ret
__HeldNext_Up_KEY_2:
        ld      a,b
        cp      KEY_8
        jr      nz,__HeldNext_Down_KEY_8
        ld      a,8
        ld      (Glim_HeldCount),a
        ld      a,1
        ld      (Down),a
        ld      a,(Changed0)
        or      CHG_DOWN
        ld      (Changed0),a
        ret
__HeldNext_Down_KEY_8:
        ld      a,b
        cp      KEY_4
        jr      nz,__HeldNext_Left_KEY_4
        ld      a,8
        ld      (Glim_HeldCount),a
        ld      a,1
        ld      (Left),a
        ld      a,(Changed0)
        or      CHG_LEFT
        ld      (Changed0),a
        ret
__HeldNext_Left_KEY_4:
        ld      a,b
        cp      KEY_6
        jr      nz,__HeldNext_Right_KEY_6
        ld      a,8
        ld      (Glim_HeldCount),a
        ld      a,1
        ld      (Right),a
        ld      a,(Changed0)
        or      CHG_RIGHT
        ld      (Changed0),a
        ret
__HeldNext_Right_KEY_6:
        ret
__PollNewPress:
        ld      a,b
        cp      KEY_2
        jr      nz,__NewNext_Up_KEY_2
        ld      a,b                  ; arm autorepeat
        ld      (Glim_HeldKey),a
        ld      a,8
        ld      (Glim_HeldCount),a
        ld      a,1
        ld      (Up),a
        ld      a,(Changed0)
        or      CHG_UP
        ld      (Changed0),a
        ret
__NewNext_Up_KEY_2:
        ld      a,b
        cp      KEY_8
        jr      nz,__NewNext_Down_KEY_8
        ld      a,b                  ; arm autorepeat
        ld      (Glim_HeldKey),a
        ld      a,8
        ld      (Glim_HeldCount),a
        ld      a,1
        ld      (Down),a
        ld      a,(Changed0)
        or      CHG_DOWN
        ld      (Changed0),a
        ret
__NewNext_Down_KEY_8:
        ld      a,b
        cp      KEY_4
        jr      nz,__NewNext_Left_KEY_4
        ld      a,b                  ; arm autorepeat
        ld      (Glim_HeldKey),a
        ld      a,8
        ld      (Glim_HeldCount),a
        ld      a,1
        ld      (Left),a
        ld      a,(Changed0)
        or      CHG_LEFT
        ld      (Changed0),a
        ret
__NewNext_Left_KEY_4:
        ld      a,b
        cp      KEY_6
        jr      nz,__NewNext_Right_KEY_6
        ld      a,b                  ; arm autorepeat
        ld      (Glim_HeldKey),a
        ld      a,8
        ld      (Glim_HeldCount),a
        ld      a,1
        ld      (Right),a
        ld      a,(Changed0)
        or      CHG_RIGHT
        ld      (Changed0),a
        ret
__NewNext_Right_KEY_6:
        ret

; --- logic phase dispatch ---
@__RunLogicEffects:
        ld      a,(Changed0)
        and     GlimDep_MoveUp__B0
        jr      z,GlimSkip_MoveUp
        call    Glim_MoveUp
GlimSkip_MoveUp:
        ld      a,(Changed0)
        and     GlimDep_MoveDown__B0
        jr      z,GlimSkip_MoveDown
        call    Glim_MoveDown
GlimSkip_MoveDown:
        ld      a,(Changed0)
        and     GlimDep_MoveLeft__B0
        jr      z,GlimSkip_MoveLeft
        call    Glim_MoveLeft
GlimSkip_MoveLeft:
        ld      a,(Changed0)
        and     GlimDep_MoveRight__B0
        jr      z,GlimSkip_MoveRight
        call    Glim_MoveRight
GlimSkip_MoveRight:
        ret

; --- render phase dispatch ---
@__RunRenderEffects:
        ld      a,(Changed0)
        and     GlimDep_DrawDot__B0
        jr      z,GlimSkip_DrawDot
        call    Glim_DrawDot
GlimSkip_DrawDot:
        ret

; --- phase boundary: deliver same-frame raises ---
@__MergeRaised:
        ld      a,(Changed0)
        ld      b,a
        ld      a,(Raised0)
        or      b
        ld      (Changed0),a
        xor     a
        ld      (Raised0),a
        ret

; --- logic block MoveUp ---
@Glim_MoveUp:
    ld a,(DotY)
    or a
    jr z,_stop    ; at the top: stop, go no further
    dec a
    ld (DotY),a
_stop:
        ld      a,(Raised0)          ; deliver to later phases this frame
        or      CHG_DOTY
        ld      (Raised0),a
        ret

; --- logic block MoveDown ---
@Glim_MoveDown:
    ld a,(DotY)
    cp 7
    jr nc,_stop
    inc a
    ld (DotY),a
_stop:
        ld      a,(Raised0)          ; deliver to later phases this frame
        or      CHG_DOTY
        ld      (Raised0),a
        ret

; --- logic block MoveLeft ---
@Glim_MoveLeft:
    ld a,(DotX)
    or a
    jr z,_stop
    dec a
    ld (DotX),a
_stop:
        ld      a,(Raised0)          ; deliver to later phases this frame
        or      CHG_DOTX
        ld      (Raised0),a
        ret

; --- logic block MoveRight ---
@Glim_MoveRight:
    ld a,(DotX)
    cp 7
    jr nc,_stop
    inc a
    ld (DotX),a
_stop:
        ld      a,(Raised0)          ; deliver to later phases this frame
        or      CHG_DOTX
        ld      (Raised0),a
        ret

; --- render block DrawDot ---
@Glim_DrawDot:
    call FbClear
    ld a,(DotX)
    ld b,a
    ld a,(DotY)
    ld c,a
    ld a,COLOR_WHITE
    call FbPlot
        ret

; --- frame rollover ---
@__EndFrame:
        xor     a
        ld      (Up),a
        ld      (Down),a
        ld      (Left),a
        ld      (Right),a
        ld      (Raised0),a
        ld      a,(Next0)            ; deferred raises become next frame
        ld      (Changed0),a
        xor     a
        ld      (Next0),a
        ret

; --- matrix8x8 profile library ---

; Scan all 8 rows with fixed dwell, then blank the matrix so
; block work never changes visible row brightness. Sound and the
; seven-segment HUD are serviced once per row (8 ticks per frame).
;! clobbers  A,BC,DE,HL
@ScanFrame:
        ld      hl,Framebuffer
        ld      c,%00000001          ; row select mask
ScanFrameRow:
        xor     a
        out     (PortRow),a          ; blank before changing colour data
        ld      a,(hl)
        out     (PortRed),a
        inc     hl
        ld      a,(hl)
        out     (PortGreen),a
        inc     hl
        ld      a,(hl)
        out     (PortBlue),a
        inc     hl
        inc     hl                   ; skip aux byte
        ld      a,c
        out     (PortRow),a          ; enable row
        push    bc
        push    hl
        call    SndService
        call    HudScanDig
        pop     hl
        pop     bc
        ld      b,ScanDwellPeriod
ScanFrameDwell:
        djnz    ScanFrameDwell
        rlc     c
        jr      nc,ScanFrameRow      ; carry after 8th rotate
        xor     a
        out     (PortRow),a          ; matrix blank on return
        ret

; Convert x (0-7, 0 = leftmost) to the matrix bit convention.
;! in A; out A; clobbers B
@MxMask:
        or      a
        ld      b,a
        ld      a,%10000000
        ret     z
MxMaskLp:
        srl     a
        djnz    MxMaskLp
        ret

; Set one pixel. B = x (0-7), C = y (0-7), A = colour bits
; (COLOR_RED/GREEN/BLUE, OR-combined). ORs into the framebuffer.
;! in A,B,C; clobbers A,B,DE,HL
@FbPlot:
        ld      d,a                  ; D = colour bits
        ld      a,c
        add     a,a
        add     a,a                  ; y * 4
        ld      e,a
        ld      a,b
        call    MxMask               ; A = pixel mask
        ld      b,a
        ld      hl,Framebuffer
        ld      a,l
        add     a,e
        ld      l,a
        ld      a,h
        adc     a,0
        ld      h,a
        srl     d
        jr      nc,FbPlotGrn
        ld      a,(hl)
        or      b
        ld      (hl),a
FbPlotGrn:
        inc     hl
        srl     d
        jr      nc,FbPlotBlu
        ld      a,(hl)
        or      b
        ld      (hl),a
FbPlotBlu:
        inc     hl
        srl     d
        ret     nc
        ld      a,(hl)
        or      b
        ld      (hl),a
        ret

; Clear the whole framebuffer.
;! clobbers  A,B,HL
@FbClear:
        ld      hl,Framebuffer
        ld      b,32
        xor     a
FbClearLp:
        ld      (hl),a
        inc     hl
        djnz    FbClearLp
        ret

; (Re)start a sound cue. A = duration in row ticks (8 per frame),
; C = divider half-period; smaller is higher pitch.
;! in A,C; clobbers A
@SndStart:
        ld      (SoundTimer),a
        ld      a,c
        ld      (SndDivReload),a
        ld      (SndDivCount),a
        xor     a
        ld      (SpeakerPort),a
        ret

; Tick the speaker state machine once per row scan.
;! clobbers A
@SndService:
        ld      a,(SoundTimer)
        or      a
        ret     z
        dec     a
        ld      (SoundTimer),a
        jr      nz,SndActive
        xor     a
        ld      (SpeakerPort),a
        ld      (SndDivCount),a
        ret
SndActive:
        ld      a,(SndDivCount)
        dec     a
        ld      (SndDivCount),a
        ret     nz
        ld      a,(SndDivReload)
        ld      (SndDivCount),a
        ld      a,(SpeakerPort)
        xor     SpeakerBit
        ld      (SpeakerPort),a
        ret

; Strobe one seven-segment digit and advance the scan index.
;! clobbers A,BC,DE,HL
@HudScanDig:
        ld      a,(HudScanIndex)
        ld      c,a
        ld      a,(SpeakerPort)
        out     (PortDigits),a       ; digits off; keep speaker bit
        ld      a,c
        ld      l,a
        ld      h,0
        ld      de,HudSegBuffer
        add     hl,de
        ld      a,(hl)
        out     (PortSegs),a
        ld      a,c
        ld      l,a
        ld      h,0
        ld      de,HudMaskTbl
        add     hl,de
        ld      a,(hl)
        ld      b,a
        ld      a,(SpeakerPort)
        or      b
        out     (PortDigits),a
        ld      a,c
        inc     a
        cp      6
        jr      c,HudScanSave
        xor     a
HudScanSave:
        ld      (HudScanIndex),a
        ret

; Zero all six HUD digits.
;! clobbers A,B,HL
@HudBlankDig:
        ld      hl,HudSegBuffer
        ld      b,6
        xor     a
HudBlankLp:
        ld      (hl),a
        inc     hl
        djnz    HudBlankLp
        ret

; Encode HL as decimal into the HUD: slot 0 shows 0, slots 1-5
; the 10000..1 digits.
;! in HL; out BC,HL; clobbers A,DE
@HudWriteU16:
        ld      a,(HudGlyphTbl)
        ld      (HudSegBuffer),a
        ld      bc,HudSegBuffer + 1
        ld      de,10000
        call    HudDecDigit
        ld      de,1000
        call    HudDecDigit
        ld      de,100
        call    HudDecDigit
        ld      de,10
        call    HudDecDigit
        ld      de,1
        call    HudDecDigit
        ret

; One decimal place value: count DE out of HL, emit the glyph.
;! in HL,DE,BC; out BC,HL; clobbers A,DE
@HudDecDigit:
        xor     a
HudDecLp:
        push    af
        ld      a,h
        cp      d
        jr      c,HudDecDone
        jr      nz,HudDecSub
        ld      a,l
        cp      e
        jr      c,HudDecDone
HudDecSub:
        pop     af
        or      a
        sbc     hl,de
        inc     a
        jr      HudDecLp
HudDecDone:
        pop     af
        push    hl
        push    bc
        ld      l,a
        ld      h,0
        ld      de,HudGlyphTbl
        add     hl,de
        ld      a,(hl)
        pop     bc
        ld      (bc),a
        inc     bc
        pop     hl
        ret
"
`;

exports[`generated output snapshots > slide.glim generates byte-identical output 1`] = `
"; Generated by Glimmer from program Slide.
; Do not edit: regenerate from the Glimmer source.
;
; Register contracts (the ;! comments) are inferred and injected
; by AZM during the Glimmer build, using the same parameters
; Debug80 uses: --contracts --rc error --reg-profile mon3.

        .org    $4000

; --- TEC-1G / MON-3 platform ---
ApiScanKeys       .equ 16
ApiRandom         .equ 49   ; A = random byte, destroys B
PortDigits        .equ $01
PortSegs          .equ $02
PortRow           .equ $05
PortRed           .equ $06
PortGreen         .equ $F8
PortBlue          .equ $F9
SpeakerBit        .equ $80
ScanDwellPeriod   .equ 255
COLOR_RED         .equ $01
COLOR_GREEN       .equ $02
COLOR_BLUE        .equ $04
COLOR_YELLOW      .equ COLOR_RED + COLOR_GREEN
COLOR_CYAN        .equ COLOR_GREEN + COLOR_BLUE
COLOR_MAGENTA     .equ COLOR_RED + COLOR_BLUE
COLOR_WHITE       .equ $07

; --- MON-3 key codes ---
KEY_GO            .equ $12

; --- change flags ---
CHG_DOTX_BIT      .equ 0
CHG_SLIDES_BIT    .equ 1
CHG_VISIBLE_BIT   .equ 2
CHG_GO_BIT        .equ 3
CHG_ARRIVED_BIT   .equ 4
CHG_BLINKTICK_BIT .equ 5
CHG_TRAVEL_BIT    .equ 6
CHG_DOTX          .equ %00000001
CHG_SLIDES        .equ %00000010
CHG_VISIBLE       .equ %00000100
CHG_GO            .equ %00001000
CHG_ARRIVED       .equ %00010000
CHG_BLINKTICK     .equ %00100000
CHG_TRAVEL        .equ %01000000

; --- block trigger masks ---
GlimDep_StartSlide__B0 .equ CHG_GO
GlimDep_TrackDot__B0 .equ CHG_TRAVEL
GlimDep_CountArrival__B0 .equ CHG_ARRIVED
GlimDep_Twinkle__B0 .equ CHG_BLINKTICK
GlimDep_DrawDot__B0 .equ CHG_DOTX + CHG_VISIBLE
GlimDep_ShowScore__B0 .equ CHG_SLIDES

; --- state storage ---
DotX:             .db 0
Slides:           .dw 0
Visible:          .db 1
Go:               .db 0
Arrived:          .db 0
BlinkTick:        .db 0
Blink:            .db 12   ; period (writable)
Glim_Blink_cnt:   .db 12
Travel:           .db 63   ; ramp progress, idle at terminal
Changed0:         .db %00000011   ; flags dispatch tests
Raised0:          .db 0   ; raises for later phases this frame
Next0:            .db 0   ; raises deferred to next frame
Framebuffer:      .ds 32           ; 8 rows x R,G,B,aux
SpeakerPort:      .db 0
SoundTimer:       .db 0
SndDivReload:     .db 0
SndDivCount:      .db 0
HudScanIndex:     .db 0
HudSegBuffer:     .ds 6
ShapePtr:         .dw 0
ShapeBaseX:       .db 0
ShapeBaseY:       .db 0
ShapeWidth:       .db 0
ShapeHeight:      .db 0
ShapeColor:       .db 0
ShapeRowMask:     .db 0
ShapeRowIndex:    .db 0
ShapeColIndex:    .db 0

; --- curve resources ---
        .align  256
Curve_SlideX:
        .db     0, 0, 0, 1, 1, 1, 1, 1, 1, 2, 2, 2, 2, 2, 2, 3
        .db     3, 3, 3, 3, 3, 3, 3, 4, 4, 4, 4, 4, 4, 4, 4, 4
        .db     5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 6, 6, 6
        .db     6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6

; --- shape resources ---
; Table format: width, height, colour, then left-aligned row masks.
Shape_Dot:
        .db     2, 2, COLOR_GREEN
        .db     %11000000
        .db     %11000000

; --- HUD data tables ---
HudMaskTbl:
        .db     $20, $10, $08, $04, $02, $01
HudGlyphTbl:
        .db     $EB, $28, $CD, $AD, $2E, $A7, $E7, $29
        .db     $EF, $2F, $6F, $E6, $C3, $EC, $C7, $47

; --- runtime loop ---
@Start:
        call    FbClear
        call    HudBlankDig
MainLoop:
        call    ScanFrame            ; show one full frame, then blank
        call    __PollBindings       ; game work runs in the blank window
        call    __TickTimers
        call    __RunDeriveEffects
        call    __MergeRaised
        call    __RunLogicEffects
        call    __MergeRaised
        call    __RunRenderEffects
        call    __EndFrame
        jp      MainLoop

; --- input polling (MON-3 _scanKeys) ---
@__PollBindings:
        ld      c,ApiScanKeys
        rst     $10
        ret     nz                   ; no key pressed
        ret     nc                   ; key held, not a new press
        ld      b,a                  ; B = key code (DE unsafe: matrix kbd)
        ld      a,b
        cp      KEY_GO
        jr      nz,__NewNext_Go_KEY_GO
        ld      a,1
        ld      (Go),a
        ld      a,(Changed0)
        or      CHG_GO
        ld      (Changed0),a
        ret
__NewNext_Go_KEY_GO:
        ret

; --- timers, ramps, frame counter ---
@__TickTimers:
        ld      a,(Glim_Blink_cnt)
        dec     a
        ld      (Glim_Blink_cnt),a
        jr      nz,__TimerNext_Blink
        ld      a,(Blink)       ; reload from period cell
        ld      (Glim_Blink_cnt),a
        ld      a,1
        ld      (BlinkTick),a
        ld      a,(Changed0)
        or      CHG_BLINKTICK
        ld      (Changed0),a
__TimerNext_Blink:
        ld      a,(Travel)
        cp      63
        jr      nc,__RampNext_Travel           ; idle at terminal
        inc     a
        ld      (Travel),a
        ld      a,(Changed0)
        or      CHG_TRAVEL
        ld      (Changed0),a
        ld      a,(Travel)
        cp      63
        jr      nz,__RampNext_Travel
        ld      a,1                  ; arrived: fire completion
        ld      (Arrived),a
        ld      a,(Changed0)
        or      CHG_ARRIVED
        ld      (Changed0),a
__RampNext_Travel:
        ret

; --- derive phase dispatch ---
@__RunDeriveEffects:
        ld      a,(Changed0)
        and     GlimDep_TrackDot__B0
        jr      z,GlimSkip_TrackDot
        call    Glim_TrackDot
GlimSkip_TrackDot:
        ret

; --- logic phase dispatch ---
@__RunLogicEffects:
        ld      a,(Changed0)
        and     GlimDep_StartSlide__B0
        jr      z,GlimSkip_StartSlide
        call    Glim_StartSlide
GlimSkip_StartSlide:
        ld      a,(Changed0)
        and     GlimDep_CountArrival__B0
        jr      z,GlimSkip_CountArrival
        call    Glim_CountArrival
GlimSkip_CountArrival:
        ld      a,(Changed0)
        and     GlimDep_Twinkle__B0
        jr      z,GlimSkip_Twinkle
        call    Glim_Twinkle
GlimSkip_Twinkle:
        ret

; --- render phase dispatch ---
@__RunRenderEffects:
        ld      a,(Changed0)
        and     GlimDep_DrawDot__B0
        jr      z,GlimSkip_DrawDot
        call    Glim_DrawDot
GlimSkip_DrawDot:
        ld      a,(Changed0)
        and     GlimDep_ShowScore__B0
        jr      z,GlimSkip_ShowScore
        call    Glim_ShowScore
GlimSkip_ShowScore:
        ret

; --- phase boundary: deliver same-frame raises ---
@__MergeRaised:
        ld      a,(Changed0)
        ld      b,a
        ld      a,(Raised0)
        or      b
        ld      (Changed0),a
        xor     a
        ld      (Raised0),a
        ret

; --- logic block StartSlide ---
@Glim_StartSlide:
    xor a
    ld (Travel),a       ; rewind the ramp: the slide begins
        ld      a,(Next0)            ; a consumer already ran: defer to next frame
        or      CHG_TRAVEL
        ld      (Next0),a
        ret

; --- derive block TrackDot ---
@Glim_TrackDot:
    ld a,(Travel)
    ld e,a
    ld d,0
    ld hl,Curve_SlideX
    add hl,de
    ld a,(hl)
    ld (DotX),a
        ld      a,(Raised0)          ; deliver to later phases this frame
        or      CHG_DOTX
        ld      (Raised0),a
        ret

; --- logic block CountArrival ---
@Glim_CountArrival:
    ld hl,(Slides)
    inc hl
    ld (Slides),hl
    call Snd_Arrive
        ld      a,(Raised0)          ; deliver to later phases this frame
        or      CHG_SLIDES
        ld      (Raised0),a
        ret

; --- logic block Twinkle ---
@Glim_Twinkle:
    ld a,(Visible)
    xor 1
    ld (Visible),a
        ld      a,(Raised0)          ; deliver to later phases this frame
        or      CHG_VISIBLE
        ld      (Raised0),a
        ret

; --- render block DrawDot ---
@Glim_DrawDot:
    call FbClear
    ld a,(Visible)
    or a
    jr z,_hidden
    ld a,(DotX)
    ld b,a
    ld c,3
    ld hl,Shape_Dot
    call ShapeDraw
_hidden:
        ret

; --- render block ShowScore ---
@Glim_ShowScore:
    ld hl,(Slides)
    call HudWriteU16
        ret

; --- frame rollover ---
@__EndFrame:
        xor     a
        ld      (Go),a
        ld      (Arrived),a
        ld      (BlinkTick),a
        ld      (Raised0),a
        ld      a,(Next0)            ; deferred raises become next frame
        ld      (Changed0),a
        xor     a
        ld      (Next0),a
        ret

; --- sound cues ---
; Non-blocking matrix-profile cues. len is row ticks; div is the
; speaker divider. Starting a cue replaces the currently active cue.
@Snd_Arrive:
        ld      a,24
        ld      c,3
        jp      SndStart


; --- matrix8x8 profile library ---

; Scan all 8 rows with fixed dwell, then blank the matrix so
; block work never changes visible row brightness. Sound and the
; seven-segment HUD are serviced once per row (8 ticks per frame).
;! clobbers  A,BC,DE,HL
@ScanFrame:
        ld      hl,Framebuffer
        ld      c,%00000001          ; row select mask
ScanFrameRow:
        xor     a
        out     (PortRow),a          ; blank before changing colour data
        ld      a,(hl)
        out     (PortRed),a
        inc     hl
        ld      a,(hl)
        out     (PortGreen),a
        inc     hl
        ld      a,(hl)
        out     (PortBlue),a
        inc     hl
        inc     hl                   ; skip aux byte
        ld      a,c
        out     (PortRow),a          ; enable row
        push    bc
        push    hl
        call    SndService
        call    HudScanDig
        pop     hl
        pop     bc
        ld      b,ScanDwellPeriod
ScanFrameDwell:
        djnz    ScanFrameDwell
        rlc     c
        jr      nc,ScanFrameRow      ; carry after 8th rotate
        xor     a
        out     (PortRow),a          ; matrix blank on return
        ret

; Convert x (0-7, 0 = leftmost) to the matrix bit convention.
;! in A; out A; clobbers B
@MxMask:
        or      a
        ld      b,a
        ld      a,%10000000
        ret     z
MxMaskLp:
        srl     a
        djnz    MxMaskLp
        ret

; Set one pixel. B = x (0-7), C = y (0-7), A = colour bits
; (COLOR_RED/GREEN/BLUE, OR-combined). ORs into the framebuffer.
;! in A,B,C; clobbers A,B,DE,HL
@FbPlot:
        ld      d,a                  ; D = colour bits
        ld      a,c
        add     a,a
        add     a,a                  ; y * 4
        ld      e,a
        ld      a,b
        call    MxMask               ; A = pixel mask
        ld      b,a
        ld      hl,Framebuffer
        ld      a,l
        add     a,e
        ld      l,a
        ld      a,h
        adc     a,0
        ld      h,a
        srl     d
        jr      nc,FbPlotGrn
        ld      a,(hl)
        or      b
        ld      (hl),a
FbPlotGrn:
        inc     hl
        srl     d
        jr      nc,FbPlotBlu
        ld      a,(hl)
        or      b
        ld      (hl),a
FbPlotBlu:
        inc     hl
        srl     d
        ret     nc
        ld      a,(hl)
        or      b
        ld      (hl),a
        ret

; Draw a shape resource. HL = Shape_<Name>, B = x, C = y.
; No clipping: keep the whole shape inside the 8x8 matrix.
;! in B,C,HL; clobbers A,BC,DE,HL
@ShapeDraw:
        ld      (ShapePtr),hl
        ld      a,b
        ld      (ShapeBaseX),a
        ld      a,c
        ld      (ShapeBaseY),a
        ld      a,(hl)
        ld      (ShapeWidth),a
        inc     hl
        ld      a,(hl)
        ld      (ShapeHeight),a
        inc     hl
        ld      a,(hl)
        ld      (ShapeColor),a
        inc     hl
        ld      (ShapePtr),hl
        xor     a
        ld      (ShapeRowIndex),a
ShapeDrawRow:
        ld      a,(ShapeRowIndex)
        ld      b,a
        ld      a,(ShapeHeight)
        cp      b
        ret     z
        ld      hl,(ShapePtr)
        ld      a,(hl)
        ld      (ShapeRowMask),a
        inc     hl
        ld      (ShapePtr),hl
        xor     a
        ld      (ShapeColIndex),a
ShapeDrawCol:
        ld      a,(ShapeColIndex)
        ld      b,a
        ld      a,(ShapeWidth)
        cp      b
        jr      z,ShapeDrawNextRow
        ld      a,(ShapeRowMask)
        bit     7,a
        jr      z,ShapeDrawSkipPixel
        ld      a,(ShapeBaseX)
        ld      b,a
        ld      a,(ShapeColIndex)
        add     a,b
        ld      b,a
        ld      a,(ShapeBaseY)
        ld      c,a
        ld      a,(ShapeRowIndex)
        add     a,c
        ld      c,a
        ld      a,(ShapeColor)
        call    FbPlot
ShapeDrawSkipPixel:
        ld      a,(ShapeRowMask)
        add     a,a
        ld      (ShapeRowMask),a
        ld      a,(ShapeColIndex)
        inc     a
        ld      (ShapeColIndex),a
        jr      ShapeDrawCol
ShapeDrawNextRow:
        ld      a,(ShapeRowIndex)
        inc     a
        ld      (ShapeRowIndex),a
        jr      ShapeDrawRow

; Clear the whole framebuffer.
;! clobbers  A,B,HL
@FbClear:
        ld      hl,Framebuffer
        ld      b,32
        xor     a
FbClearLp:
        ld      (hl),a
        inc     hl
        djnz    FbClearLp
        ret

; (Re)start a sound cue. A = duration in row ticks (8 per frame),
; C = divider half-period; smaller is higher pitch.
;! in A,C; clobbers A
@SndStart:
        ld      (SoundTimer),a
        ld      a,c
        ld      (SndDivReload),a
        ld      (SndDivCount),a
        xor     a
        ld      (SpeakerPort),a
        ret

; Tick the speaker state machine once per row scan.
;! clobbers A
@SndService:
        ld      a,(SoundTimer)
        or      a
        ret     z
        dec     a
        ld      (SoundTimer),a
        jr      nz,SndActive
        xor     a
        ld      (SpeakerPort),a
        ld      (SndDivCount),a
        ret
SndActive:
        ld      a,(SndDivCount)
        dec     a
        ld      (SndDivCount),a
        ret     nz
        ld      a,(SndDivReload)
        ld      (SndDivCount),a
        ld      a,(SpeakerPort)
        xor     SpeakerBit
        ld      (SpeakerPort),a
        ret

; Strobe one seven-segment digit and advance the scan index.
;! clobbers A,BC,DE,HL
@HudScanDig:
        ld      a,(HudScanIndex)
        ld      c,a
        ld      a,(SpeakerPort)
        out     (PortDigits),a       ; digits off; keep speaker bit
        ld      a,c
        ld      l,a
        ld      h,0
        ld      de,HudSegBuffer
        add     hl,de
        ld      a,(hl)
        out     (PortSegs),a
        ld      a,c
        ld      l,a
        ld      h,0
        ld      de,HudMaskTbl
        add     hl,de
        ld      a,(hl)
        ld      b,a
        ld      a,(SpeakerPort)
        or      b
        out     (PortDigits),a
        ld      a,c
        inc     a
        cp      6
        jr      c,HudScanSave
        xor     a
HudScanSave:
        ld      (HudScanIndex),a
        ret

; Zero all six HUD digits.
;! clobbers A,B,HL
@HudBlankDig:
        ld      hl,HudSegBuffer
        ld      b,6
        xor     a
HudBlankLp:
        ld      (hl),a
        inc     hl
        djnz    HudBlankLp
        ret

; Encode HL as decimal into the HUD: slot 0 shows 0, slots 1-5
; the 10000..1 digits.
;! in HL; out BC,HL; clobbers A,DE
@HudWriteU16:
        ld      a,(HudGlyphTbl)
        ld      (HudSegBuffer),a
        ld      bc,HudSegBuffer + 1
        ld      de,10000
        call    HudDecDigit
        ld      de,1000
        call    HudDecDigit
        ld      de,100
        call    HudDecDigit
        ld      de,10
        call    HudDecDigit
        ld      de,1
        call    HudDecDigit
        ret

; One decimal place value: count DE out of HL, emit the glyph.
;! in HL,DE,BC; out BC,HL; clobbers A,DE
@HudDecDigit:
        xor     a
HudDecLp:
        push    af
        ld      a,h
        cp      d
        jr      c,HudDecDone
        jr      nz,HudDecSub
        ld      a,l
        cp      e
        jr      c,HudDecDone
HudDecSub:
        pop     af
        or      a
        sbc     hl,de
        inc     a
        jr      HudDecLp
HudDecDone:
        pop     af
        push    hl
        push    bc
        ld      l,a
        ld      h,0
        ld      de,HudGlyphTbl
        add     hl,de
        ld      a,(hl)
        pop     bc
        ld      (bc),a
        inc     bc
        pop     hl
        ret
"
`;

exports[`generated output snapshots > snake.glim generates byte-identical output 1`] = `
"; Generated by Glimmer from program Snake.
; Do not edit: regenerate from the Glimmer source.
;
; Register contracts (the ;! comments) are inferred and injected
; by AZM during the Glimmer build, using the same parameters
; Debug80 uses: --contracts --rc error --reg-profile mon3.

        .org    $4000

; --- TEC-1G / MON-3 platform ---
ApiScanKeys       .equ 16
ApiRandom         .equ 49   ; A = random byte, destroys B
PortDigits        .equ $01
PortSegs          .equ $02
PortRow           .equ $05
PortRed           .equ $06
PortGreen         .equ $F8
PortBlue          .equ $F9
SpeakerBit        .equ $80
ScanDwellPeriod   .equ 255
COLOR_RED         .equ $01
COLOR_GREEN       .equ $02
COLOR_BLUE        .equ $04
COLOR_YELLOW      .equ COLOR_RED + COLOR_GREEN
COLOR_CYAN        .equ COLOR_GREEN + COLOR_BLUE
COLOR_MAGENTA     .equ COLOR_RED + COLOR_BLUE
COLOR_WHITE       .equ $07

; --- MON-3 key codes ---
KEY_GO            .equ $12
KEY_2             .equ $02
KEY_8             .equ $08
KEY_4             .equ $04
KEY_6             .equ $06

; --- change flags ---
CHG_DIR_BIT       .equ 0
CHG_HEADIDX_BIT   .equ 1
CHG_LEN_BIT       .equ 2
CHG_FOODPOS_BIT   .equ 3
CHG_ALIVE_BIT     .equ 4
CHG_BODY_BIT      .equ 5
CHG_STEPP_BIT     .equ 6
CHG_GOP_BIT       .equ 7
CHG_UPP_BIT       .equ 0
CHG_DOWNP_BIT     .equ 1
CHG_LEFTP_BIT     .equ 2
CHG_RIGHTP_BIT    .equ 3
CHG_DIR           .equ %00000001
CHG_HEADIDX       .equ %00000010
CHG_LEN           .equ %00000100
CHG_FOODPOS       .equ %00001000
CHG_ALIVE         .equ %00010000
CHG_BODY          .equ %00100000
CHG_STEPP         .equ %01000000
CHG_GOP           .equ %10000000
CHG_UPP           .equ %00000001
CHG_DOWNP         .equ %00000010
CHG_LEFTP         .equ %00000100
CHG_RIGHTP        .equ %00001000

; --- block trigger masks ---
GlimDep_StartGame__B0 .equ CHG_GOP
GlimDep_TurnUp__B1 .equ CHG_UPP
GlimDep_TurnDown__B1 .equ CHG_DOWNP
GlimDep_TurnLeft__B1 .equ CHG_LEFTP
GlimDep_TurnRight__B1 .equ CHG_RIGHTP
GlimDep_StepSnake__B0 .equ CHG_STEPP
GlimDep_DrawBoard__B0 .equ CHG_BODY + CHG_FOODPOS + CHG_ALIVE
GlimDep_ShowScore__B0 .equ CHG_LEN

; --- state storage ---
Dir:              .db 3
HeadIdx:          .db 0
Len:              .db 0
FoodPos:          .db 42
Alive:            .db 0
Body:             .ds 64, 0   ; byte array
StepP:            .db 0
GoP:              .db 0
UpP:              .db 0
DownP:            .db 0
LeftP:            .db 0
RightP:           .db 0
Step:             .db 10   ; period (writable)
Glim_Step_cnt:    .db 10
Changed0:         .db %00011100   ; flags dispatch tests
Changed1:         .db %00000000   ; flags dispatch tests
Raised0:          .db 0   ; raises for later phases this frame
Raised1:          .db 0   ; raises for later phases this frame
Next0:            .db 0   ; raises deferred to next frame
Next1:            .db 0   ; raises deferred to next frame
Framebuffer:      .ds 32           ; 8 rows x R,G,B,aux
SpeakerPort:      .db 0
SoundTimer:       .db 0
SndDivReload:     .db 0
SndDivCount:      .db 0
HudScanIndex:     .db 0
HudSegBuffer:     .ds 6

; --- HUD data tables ---
HudMaskTbl:
        .db     $20, $10, $08, $04, $02, $01
HudGlyphTbl:
        .db     $EB, $28, $CD, $AD, $2E, $A7, $E7, $29
        .db     $EF, $2F, $6F, $E6, $C3, $EC, $C7, $47

; --- runtime loop ---
@Start:
        call    FbClear
        call    HudBlankDig
MainLoop:
        call    ScanFrame            ; show one full frame, then blank
        call    __PollBindings       ; game work runs in the blank window
        call    __TickTimers
        call    __RunLogicEffects
        call    __MergeRaised
        call    __RunRenderEffects
        call    __EndFrame
        jp      MainLoop

; --- input polling (MON-3 _scanKeys) ---
@__PollBindings:
        ld      c,ApiScanKeys
        rst     $10
        ret     nz                   ; no key pressed
        ret     nc                   ; key held, not a new press
        ld      b,a                  ; B = key code (DE unsafe: matrix kbd)
        ld      a,b
        cp      KEY_GO
        jr      nz,__NewNext_GoP_KEY_GO
        ld      a,1
        ld      (GoP),a
        ld      a,(Changed0)
        or      CHG_GOP
        ld      (Changed0),a
        ret
__NewNext_GoP_KEY_GO:
        ld      a,b
        cp      KEY_2
        jr      nz,__NewNext_UpP_KEY_2
        ld      a,1
        ld      (UpP),a
        ld      a,(Changed1)
        or      CHG_UPP
        ld      (Changed1),a
        ret
__NewNext_UpP_KEY_2:
        ld      a,b
        cp      KEY_8
        jr      nz,__NewNext_DownP_KEY_8
        ld      a,1
        ld      (DownP),a
        ld      a,(Changed1)
        or      CHG_DOWNP
        ld      (Changed1),a
        ret
__NewNext_DownP_KEY_8:
        ld      a,b
        cp      KEY_4
        jr      nz,__NewNext_LeftP_KEY_4
        ld      a,1
        ld      (LeftP),a
        ld      a,(Changed1)
        or      CHG_LEFTP
        ld      (Changed1),a
        ret
__NewNext_LeftP_KEY_4:
        ld      a,b
        cp      KEY_6
        jr      nz,__NewNext_RightP_KEY_6
        ld      a,1
        ld      (RightP),a
        ld      a,(Changed1)
        or      CHG_RIGHTP
        ld      (Changed1),a
        ret
__NewNext_RightP_KEY_6:
        ret

; --- timers, ramps, frame counter ---
@__TickTimers:
        ld      a,(Glim_Step_cnt)
        dec     a
        ld      (Glim_Step_cnt),a
        jr      nz,__TimerNext_Step
        ld      a,(Step)       ; reload from period cell
        ld      (Glim_Step_cnt),a
        ld      a,1
        ld      (StepP),a
        ld      a,(Changed0)
        or      CHG_STEPP
        ld      (Changed0),a
__TimerNext_Step:
        ret

; --- logic phase dispatch ---
@__RunLogicEffects:
        ld      a,(Changed0)
        and     GlimDep_StartGame__B0
        jr      z,GlimSkip_StartGame
        call    Glim_StartGame
GlimSkip_StartGame:
        ld      a,(Changed1)
        and     GlimDep_TurnUp__B1
        jr      z,GlimSkip_TurnUp
        call    Glim_TurnUp
GlimSkip_TurnUp:
        ld      a,(Changed1)
        and     GlimDep_TurnDown__B1
        jr      z,GlimSkip_TurnDown
        call    Glim_TurnDown
GlimSkip_TurnDown:
        ld      a,(Changed1)
        and     GlimDep_TurnLeft__B1
        jr      z,GlimSkip_TurnLeft
        call    Glim_TurnLeft
GlimSkip_TurnLeft:
        ld      a,(Changed1)
        and     GlimDep_TurnRight__B1
        jr      z,GlimSkip_TurnRight
        call    Glim_TurnRight
GlimSkip_TurnRight:
        ld      a,(Changed0)
        and     GlimDep_StepSnake__B0
        jr      z,GlimSkip_StepSnake
        call    Glim_StepSnake
GlimSkip_StepSnake:
        ret

; --- render phase dispatch ---
@__RunRenderEffects:
        ld      a,(Changed0)
        and     GlimDep_DrawBoard__B0
        jr      z,GlimSkip_DrawBoard
        call    Glim_DrawBoard
GlimSkip_DrawBoard:
        ld      a,(Changed0)
        and     GlimDep_ShowScore__B0
        jr      z,GlimSkip_ShowScore
        call    Glim_ShowScore
GlimSkip_ShowScore:
        ret

; --- phase boundary: deliver same-frame raises ---
@__MergeRaised:
        ld      a,(Changed0)
        ld      b,a
        ld      a,(Raised0)
        or      b
        ld      (Changed0),a
        ld      a,(Changed1)
        ld      b,a
        ld      a,(Raised1)
        or      b
        ld      (Changed1),a
        xor     a
        ld      (Raised0),a
        ld      (Raised1),a
        ret

; --- logic block StartGame ---
@Glim_StartGame:
    ld a,(Alive)
    or a
    jr nz,_skip         ; GO only restarts when the game is over
    ld hl,Body
    ld (hl),26          ; body: (2,3) then head (3,3)
    inc hl
    ld (hl),27
    ld a,1
    ld (HeadIdx),a
    ld a,2
    ld (Len),a
    ld a,3
    ld (Dir),a          ; heading right
    ld a,42
    ld (FoodPos),a
    ld a,10
    ld (Step),a
    ld a,1
    ld (Alive),a
_skip:
        ld      a,(Raised0)          ; deliver to later phases this frame
        or      CHG_BODY + CHG_HEADIDX + CHG_LEN + CHG_DIR + CHG_FOODPOS + CHG_ALIVE
        ld      (Raised0),a
        ret

; --- logic block TurnUp ---
@Glim_TurnUp:
    ld a,(Dir)
    cp 1                ; no reversing out of down
    jr z,_skip
    xor a
    ld (Dir),a
_skip:
        ld      a,(Raised0)          ; deliver to later phases this frame
        or      CHG_DIR
        ld      (Raised0),a
        ret

; --- logic block TurnDown ---
@Glim_TurnDown:
    ld a,(Dir)
    or a                ; no reversing out of up
    jr z,_skip
    ld a,1
    ld (Dir),a
_skip:
        ld      a,(Raised0)          ; deliver to later phases this frame
        or      CHG_DIR
        ld      (Raised0),a
        ret

; --- logic block TurnLeft ---
@Glim_TurnLeft:
    ld a,(Dir)
    cp 3                ; no reversing out of right
    jr z,_skip
    ld a,2
    ld (Dir),a
_skip:
        ld      a,(Raised0)          ; deliver to later phases this frame
        or      CHG_DIR
        ld      (Raised0),a
        ret

; --- logic block TurnRight ---
@Glim_TurnRight:
    ld a,(Dir)
    cp 2                ; no reversing out of left
    jr z,_skip
    ld a,3
    ld (Dir),a
_skip:
        ld      a,(Raised0)          ; deliver to later phases this frame
        or      CHG_DIR
        ld      (Raised0),a
        ret

; --- logic block StepSnake ---
@Glim_StepSnake:
    ld a,(Alive)
    or a
    jp z,_done          ; jp: _done is beyond jr's +127 range
    ; current head position -> E
    ld hl,Body
    ld a,(HeadIdx)
    add a,l
    ld l,a
    ld a,h
    adc a,0
    ld h,a
    ld a,(hl)
    ld e,a
    ; new position by Dir, wrapping every edge
    ld a,(Dir)
    or a
    jr nz,_notup
    ld a,e
    sub 8
    and %00111111
    jr _have
_notup:
    cp 1
    jr nz,_notdown
    ld a,e
    add a,8
    and %00111111
    jr _have
_notdown:
    cp 2
    jr nz,_right
    ld a,e
    dec a
    and %00000111
    ld d,a
    ld a,e
    and %00111000
    or d
    jr _have
_right:
    ld a,e
    inc a
    and %00000111
    ld d,a
    ld a,e
    and %00111000
    or d
_have:
    ld d,a              ; D = new position (BodyContains preserves D)
    call BodyContains
    jr nc,_move
    xor a               ; bit yourself: game over
    ld (Alive),a
    call Snd_Die
    jp _done
_move:
    ld a,(HeadIdx)
    inc a
    and %00111111
    ld (HeadIdx),a
    ld hl,Body
    add a,l
    ld l,a
    ld a,h
    adc a,0
    ld h,a
    ld (hl),d
    ; eat?
    ld a,(FoodPos)
    cp d
    jp nz,_done
    ld a,(Len)
    cp 62
    jr nc,_beep         ; full board cap: stop growing
    inc a
    ld (Len),a
    ld a,(Step)         ; quicken the pace, floor at 4
    cp 4
    jr c,_beep
    dec a
    ld (Step),a
_beep:
    call Snd_Eat
    ; next food: a MON-3 random candidate, then probe for a free cell.
    ; (_random destroys B; the mon3 contract profile proves the rest.)
    ld c,ApiRandom
    rst $10
    and %00111111
_probe:
    ld d,a
    call BodyContains
    jr nc,_food
    ld a,d
    inc a
    and %00111111
    jr _probe
_food:
    ld a,d
    ld (FoodPos),a
_done:
        ld      a,(Raised0)          ; deliver to later phases this frame
        or      CHG_BODY + CHG_HEADIDX + CHG_LEN + CHG_FOODPOS + CHG_ALIVE
        ld      (Raised0),a
        ret

; --- render block DrawBoard ---
@Glim_DrawBoard:
    call FbClear
    ld a,(FoodPos)
    ld d,COLOR_RED
    call PlotPos
    call DrawBody
        ret

; --- render block ShowScore ---
@Glim_ShowScore:
    ld a,(Len)
    ld l,a
    ld h,0
    call HudWriteU16
        ret

; --- frame rollover ---
@__EndFrame:
        xor     a
        ld      (StepP),a
        ld      (GoP),a
        ld      (UpP),a
        ld      (DownP),a
        ld      (LeftP),a
        ld      (RightP),a
        ld      (Raised0),a
        ld      (Raised1),a
        ld      a,(Next0)            ; deferred raises become next frame
        ld      (Changed0),a
        ld      a,(Next1)            ; deferred raises become next frame
        ld      (Changed1),a
        xor     a
        ld      (Next0),a
        ld      (Next1),a
        ret

; --- imported AZM modules ---
; Import names resolve program-wide; bytes land here, outside
; every execution path. @ labels are the modules' public API.
        .import "snake-lib.asm"

; --- sound cues ---
; Non-blocking matrix-profile cues. len is row ticks; div is the
; speaker divider. Starting a cue replaces the currently active cue.
@Snd_Eat:
        ld      a,12
        ld      c,2
        jp      SndStart

@Snd_Die:
        ld      a,200
        ld      c,9
        jp      SndStart


; --- matrix8x8 profile library ---

; Scan all 8 rows with fixed dwell, then blank the matrix so
; block work never changes visible row brightness. Sound and the
; seven-segment HUD are serviced once per row (8 ticks per frame).
;! clobbers  A,BC,DE,HL
@ScanFrame:
        ld      hl,Framebuffer
        ld      c,%00000001          ; row select mask
ScanFrameRow:
        xor     a
        out     (PortRow),a          ; blank before changing colour data
        ld      a,(hl)
        out     (PortRed),a
        inc     hl
        ld      a,(hl)
        out     (PortGreen),a
        inc     hl
        ld      a,(hl)
        out     (PortBlue),a
        inc     hl
        inc     hl                   ; skip aux byte
        ld      a,c
        out     (PortRow),a          ; enable row
        push    bc
        push    hl
        call    SndService
        call    HudScanDig
        pop     hl
        pop     bc
        ld      b,ScanDwellPeriod
ScanFrameDwell:
        djnz    ScanFrameDwell
        rlc     c
        jr      nc,ScanFrameRow      ; carry after 8th rotate
        xor     a
        out     (PortRow),a          ; matrix blank on return
        ret

; Convert x (0-7, 0 = leftmost) to the matrix bit convention.
;! in A; out A; clobbers B
@MxMask:
        or      a
        ld      b,a
        ld      a,%10000000
        ret     z
MxMaskLp:
        srl     a
        djnz    MxMaskLp
        ret

; Set one pixel. B = x (0-7), C = y (0-7), A = colour bits
; (COLOR_RED/GREEN/BLUE, OR-combined). ORs into the framebuffer.
;! in A,B,C; clobbers A,B,DE,HL
@FbPlot:
        ld      d,a                  ; D = colour bits
        ld      a,c
        add     a,a
        add     a,a                  ; y * 4
        ld      e,a
        ld      a,b
        call    MxMask               ; A = pixel mask
        ld      b,a
        ld      hl,Framebuffer
        ld      a,l
        add     a,e
        ld      l,a
        ld      a,h
        adc     a,0
        ld      h,a
        srl     d
        jr      nc,FbPlotGrn
        ld      a,(hl)
        or      b
        ld      (hl),a
FbPlotGrn:
        inc     hl
        srl     d
        jr      nc,FbPlotBlu
        ld      a,(hl)
        or      b
        ld      (hl),a
FbPlotBlu:
        inc     hl
        srl     d
        ret     nc
        ld      a,(hl)
        or      b
        ld      (hl),a
        ret

; Clear the whole framebuffer.
;! clobbers  A,B,HL
@FbClear:
        ld      hl,Framebuffer
        ld      b,32
        xor     a
FbClearLp:
        ld      (hl),a
        inc     hl
        djnz    FbClearLp
        ret

; (Re)start a sound cue. A = duration in row ticks (8 per frame),
; C = divider half-period; smaller is higher pitch.
;! in A,C; clobbers A
@SndStart:
        ld      (SoundTimer),a
        ld      a,c
        ld      (SndDivReload),a
        ld      (SndDivCount),a
        xor     a
        ld      (SpeakerPort),a
        ret

; Tick the speaker state machine once per row scan.
;! clobbers A
@SndService:
        ld      a,(SoundTimer)
        or      a
        ret     z
        dec     a
        ld      (SoundTimer),a
        jr      nz,SndActive
        xor     a
        ld      (SpeakerPort),a
        ld      (SndDivCount),a
        ret
SndActive:
        ld      a,(SndDivCount)
        dec     a
        ld      (SndDivCount),a
        ret     nz
        ld      a,(SndDivReload)
        ld      (SndDivCount),a
        ld      a,(SpeakerPort)
        xor     SpeakerBit
        ld      (SpeakerPort),a
        ret

; Strobe one seven-segment digit and advance the scan index.
;! clobbers A,BC,DE,HL
@HudScanDig:
        ld      a,(HudScanIndex)
        ld      c,a
        ld      a,(SpeakerPort)
        out     (PortDigits),a       ; digits off; keep speaker bit
        ld      a,c
        ld      l,a
        ld      h,0
        ld      de,HudSegBuffer
        add     hl,de
        ld      a,(hl)
        out     (PortSegs),a
        ld      a,c
        ld      l,a
        ld      h,0
        ld      de,HudMaskTbl
        add     hl,de
        ld      a,(hl)
        ld      b,a
        ld      a,(SpeakerPort)
        or      b
        out     (PortDigits),a
        ld      a,c
        inc     a
        cp      6
        jr      c,HudScanSave
        xor     a
HudScanSave:
        ld      (HudScanIndex),a
        ret

; Zero all six HUD digits.
;! clobbers A,B,HL
@HudBlankDig:
        ld      hl,HudSegBuffer
        ld      b,6
        xor     a
HudBlankLp:
        ld      (hl),a
        inc     hl
        djnz    HudBlankLp
        ret

; Encode HL as decimal into the HUD: slot 0 shows 0, slots 1-5
; the 10000..1 digits.
;! in HL; out BC,HL; clobbers A,DE
@HudWriteU16:
        ld      a,(HudGlyphTbl)
        ld      (HudSegBuffer),a
        ld      bc,HudSegBuffer + 1
        ld      de,10000
        call    HudDecDigit
        ld      de,1000
        call    HudDecDigit
        ld      de,100
        call    HudDecDigit
        ld      de,10
        call    HudDecDigit
        ld      de,1
        call    HudDecDigit
        ret

; One decimal place value: count DE out of HL, emit the glyph.
;! in HL,DE,BC; out BC,HL; clobbers A,DE
@HudDecDigit:
        xor     a
HudDecLp:
        push    af
        ld      a,h
        cp      d
        jr      c,HudDecDone
        jr      nz,HudDecSub
        ld      a,l
        cp      e
        jr      c,HudDecDone
HudDecSub:
        pop     af
        or      a
        sbc     hl,de
        inc     a
        jr      HudDecLp
HudDecDone:
        pop     af
        push    hl
        push    bc
        ld      l,a
        ld      h,0
        ld      de,HudGlyphTbl
        add     hl,de
        ld      a,(hl)
        pop     bc
        ld      (bc),a
        inc     bc
        pop     hl
        ret
"
`;

exports[`generated output snapshots > tetro.glim generates byte-identical output 1`] = `
"; Generated by Glimmer from program Tetro.
; Do not edit: regenerate from the Glimmer source.
;
; Register contracts (the ;! comments) are inferred and injected
; by AZM during the Glimmer build, using the same parameters
; Debug80 uses: --contracts --rc error --reg-profile mon3.

        .org    $4000

; --- TEC-1G / MON-3 platform ---
ApiScanKeys       .equ 16
ApiRandom         .equ 49   ; A = random byte, destroys B
PortDigits        .equ $01
PortSegs          .equ $02
PortRow           .equ $05
PortRed           .equ $06
PortGreen         .equ $F8
PortBlue          .equ $F9
SpeakerBit        .equ $80
ScanDwellPeriod   .equ 255
COLOR_RED         .equ $01
COLOR_GREEN       .equ $02
COLOR_BLUE        .equ $04
COLOR_YELLOW      .equ COLOR_RED + COLOR_GREEN
COLOR_CYAN        .equ COLOR_GREEN + COLOR_BLUE
COLOR_MAGENTA     .equ COLOR_RED + COLOR_BLUE
COLOR_WHITE       .equ $07

; --- MON-3 key codes ---
KEY_4             .equ $04
KEY_6             .equ $06
KEY_2             .equ $02
KEY_5             .equ $05
KEY_AD            .equ $13
KEY_0             .equ $00
KEY_GO            .equ $12

; --- change flags ---
CHG_PLAYERX_BIT   .equ 0
CHG_PLAYERY_BIT   .equ 1
CHG_CURPIECEINDEX_BIT .equ 2
CHG_CURROTATION_BIT .equ 3
CHG_NEXTPIECEINDEX_BIT .equ 4
CHG_SCORE_BIT     .equ 5
CHG_LINESCLEARED_BIT .equ 6
CHG_BOARDROWS_BIT .equ 7
CHG_BOARDRED_BIT  .equ 0
CHG_BOARDGREEN_BIT .equ 1
CHG_BOARDBLUE_BIT .equ 2
CHG_MOVELEFTP_BIT .equ 3
CHG_MOVERIGHTP_BIT .equ 4
CHG_SOFTDROPP_BIT .equ 5
CHG_ROTATEP_BIT   .equ 6
CHG_PAUSEP_BIT    .equ 7
CHG_STARTP_BIT    .equ 0
CHG_GRAVITYFIRE_BIT .equ 1
CHG_CURRENTCARD_BIT .equ 2
CHG_FRAMECOUNT_BIT .equ 3
CHG_PLAYERX       .equ %00000001
CHG_PLAYERY       .equ %00000010
CHG_CURPIECEINDEX .equ %00000100
CHG_CURROTATION   .equ %00001000
CHG_NEXTPIECEINDEX .equ %00010000
CHG_SCORE         .equ %00100000
CHG_LINESCLEARED  .equ %01000000
CHG_BOARDROWS     .equ %10000000
CHG_BOARDRED      .equ %00000001
CHG_BOARDGREEN    .equ %00000010
CHG_BOARDBLUE     .equ %00000100
CHG_MOVELEFTP     .equ %00001000
CHG_MOVERIGHTP    .equ %00010000
CHG_SOFTDROPP     .equ %00100000
CHG_ROTATEP       .equ %01000000
CHG_PAUSEP        .equ %10000000
CHG_STARTP        .equ %00000001
CHG_GRAVITYFIRE   .equ %00000010
CHG_CURRENTCARD   .equ %00000100
CHG_FRAMECOUNT    .equ %00001000

; --- block trigger masks ---
GlimDep_SplashShow__B2 .equ CHG_CURRENTCARD
GlimDep_SplashTwinkle__B2 .equ CHG_FRAMECOUNT
GlimDep_SplashExit__B2 .equ CHG_STARTP
GlimDep_StartRound__B2 .equ CHG_CURRENTCARD
GlimDep_ApplyMove__B1 .equ CHG_MOVELEFTP + CHG_MOVERIGHTP
GlimDep_ApplyRotate__B1 .equ CHG_ROTATEP
GlimDep_ApplyGravity__B1 .equ CHG_SOFTDROPP
GlimDep_ApplyGravity__B2 .equ CHG_GRAVITYFIRE
GlimDep_DifficultyCurve__B0 .equ CHG_SCORE
GlimDep_Pause__B1 .equ CHG_PAUSEP
GlimDep_DrawBoard__B0 .equ CHG_BOARDROWS + CHG_PLAYERX + CHG_PLAYERY + CHG_CURROTATION + CHG_CURPIECEINDEX
GlimDep_DrawScore__B0 .equ CHG_SCORE
GlimDep_Unpause__B1 .equ CHG_PAUSEP
GlimDep_GameOverPulse__B2 .equ CHG_FRAMECOUNT
GlimDep_Restart__B2 .equ CHG_STARTP

; --- cards ---
; Exactly one card is active; CurrentCard holds it. Blocks in a
; card's section dispatch only while it is active.
Card              .enum Splash, Playing, Paused, GameOver

; --- state storage ---
PlayerX:          .db 0
PlayerY:          .db 0
CurPieceIndex:    .db 0
CurRotation:      .db 0
NextPieceIndex:   .db 0
Score:            .dw 0
LinesCleared:     .db 0
BoardRows:        .ds 8, 0   ; byte array
BoardRed:         .ds 8, 0   ; byte array
BoardGreen:       .ds 8, 0   ; byte array
BoardBlue:        .ds 8, 0   ; byte array
MoveLeftP:        .db 0
MoveRightP:       .db 0
SoftDropP:        .db 0
RotateP:          .db 0
PauseP:           .db 0
StartP:           .db 0
GravityFire:      .db 0
Gravity:          .db 32   ; period (writable)
Glim_Gravity_cnt: .db 32
CurrentCard:      .db Card.Splash   ; active card, starts changed
GlimPrevCard:     .db $FF          ; enter edge detector ($FF = before any card)
FrameCount:       .db 0
Glim_HeldKey:     .db $FF
Glim_HeldCount:   .db 0
Changed0:         .db %00000000   ; flags dispatch tests
Changed1:         .db %00000000   ; flags dispatch tests
Changed2:         .db %00000100   ; flags dispatch tests
Raised0:          .db 0   ; raises for later phases this frame
Raised1:          .db 0   ; raises for later phases this frame
Raised2:          .db 0   ; raises for later phases this frame
Next0:            .db 0   ; raises deferred to next frame
Next1:            .db 0   ; raises deferred to next frame
Next2:            .db 0   ; raises deferred to next frame
Framebuffer:      .ds 32           ; 8 rows x R,G,B,aux
SpeakerPort:      .db 0
SoundTimer:       .db 0
SndDivReload:     .db 0
SndDivCount:      .db 0
HudScanIndex:     .db 0
HudSegBuffer:     .ds 6

; --- HUD data tables ---
HudMaskTbl:
        .db     $20, $10, $08, $04, $02, $01
HudGlyphTbl:
        .db     $EB, $28, $CD, $AD, $2E, $A7, $E7, $29
        .db     $EF, $2F, $6F, $E6, $C3, $EC, $C7, $47

; --- runtime loop ---
@Start:
        call    FbClear
        call    HudBlankDig
MainLoop:
        call    ScanFrame            ; show one full frame, then blank
        call    __PollBindings       ; game work runs in the blank window
        call    __TickTimers
        call    __RunDeriveEffects
        call    __MergeRaised
        call    __RunLogicEffects
        call    __MergeRaised
        call    __RunRenderEffects
        call    __EndFrame
        jp      MainLoop

; --- input polling (MON-3 _scanKeys) ---
@__PollBindings:
        ld      c,ApiScanKeys
        rst     $10
        jr      z,__PollKeyDown
        ld      a,$FF                ; no key: disarm autorepeat
        ld      (Glim_HeldKey),a
        ret
__PollKeyDown:
        ld      b,a                  ; B = key code (DE unsafe: matrix kbd)
        jr      c,__PollNewPress
        ld      a,(Glim_HeldKey)     ; held: autorepeat armed for this key?
        cp      b
        ret     nz
        ld      a,(Glim_HeldCount)
        dec     a
        ld      (Glim_HeldCount),a
        ret     nz
        ld      a,b
        cp      KEY_4
        jr      nz,__HeldNext_MoveLeftP_KEY_4
        ld      a,10
        ld      (Glim_HeldCount),a
        ld      a,1
        ld      (MoveLeftP),a
        ld      a,(Changed1)
        or      CHG_MOVELEFTP
        ld      (Changed1),a
        ret
__HeldNext_MoveLeftP_KEY_4:
        ld      a,b
        cp      KEY_6
        jr      nz,__HeldNext_MoveRightP_KEY_6
        ld      a,10
        ld      (Glim_HeldCount),a
        ld      a,1
        ld      (MoveRightP),a
        ld      a,(Changed1)
        or      CHG_MOVERIGHTP
        ld      (Changed1),a
        ret
__HeldNext_MoveRightP_KEY_6:
        ld      a,b
        cp      KEY_2
        jr      nz,__HeldNext_SoftDropP_KEY_2
        ld      a,3
        ld      (Glim_HeldCount),a
        ld      a,1
        ld      (SoftDropP),a
        ld      a,(Changed1)
        or      CHG_SOFTDROPP
        ld      (Changed1),a
        ret
__HeldNext_SoftDropP_KEY_2:
        ret
__PollNewPress:
        ld      a,b
        cp      KEY_4
        jr      nz,__NewNext_MoveLeftP_KEY_4
        ld      a,b                  ; arm autorepeat
        ld      (Glim_HeldKey),a
        ld      a,10
        ld      (Glim_HeldCount),a
        ld      a,1
        ld      (MoveLeftP),a
        ld      a,(Changed1)
        or      CHG_MOVELEFTP
        ld      (Changed1),a
        ret
__NewNext_MoveLeftP_KEY_4:
        ld      a,b
        cp      KEY_6
        jr      nz,__NewNext_MoveRightP_KEY_6
        ld      a,b                  ; arm autorepeat
        ld      (Glim_HeldKey),a
        ld      a,10
        ld      (Glim_HeldCount),a
        ld      a,1
        ld      (MoveRightP),a
        ld      a,(Changed1)
        or      CHG_MOVERIGHTP
        ld      (Changed1),a
        ret
__NewNext_MoveRightP_KEY_6:
        ld      a,b
        cp      KEY_2
        jr      nz,__NewNext_SoftDropP_KEY_2
        ld      a,b                  ; arm autorepeat
        ld      (Glim_HeldKey),a
        ld      a,3
        ld      (Glim_HeldCount),a
        ld      a,1
        ld      (SoftDropP),a
        ld      a,(Changed1)
        or      CHG_SOFTDROPP
        ld      (Changed1),a
        ret
__NewNext_SoftDropP_KEY_2:
        ld      a,b
        cp      KEY_5
        jr      nz,__NewNext_RotateP_KEY_5
        ld      a,1
        ld      (RotateP),a
        ld      a,(Changed1)
        or      CHG_ROTATEP
        ld      (Changed1),a
        ret
__NewNext_RotateP_KEY_5:
        ld      a,b
        cp      KEY_AD
        jr      nz,__NewNext_RotateP_KEY_AD
        ld      a,1
        ld      (RotateP),a
        ld      a,(Changed1)
        or      CHG_ROTATEP
        ld      (Changed1),a
        ret
__NewNext_RotateP_KEY_AD:
        ld      a,b
        cp      KEY_0
        jr      nz,__NewNext_PauseP_KEY_0
        ld      a,1
        ld      (PauseP),a
        ld      a,(Changed1)
        or      CHG_PAUSEP
        ld      (Changed1),a
        ret
__NewNext_PauseP_KEY_0:
        ld      a,b
        cp      KEY_GO
        jr      nz,__NewNext_StartP_KEY_GO
        ld      a,1
        ld      (StartP),a
        ld      a,(Changed2)
        or      CHG_STARTP
        ld      (Changed2),a
        ret
__NewNext_StartP_KEY_GO:
        ret

; --- timers, ramps, frame counter ---
@__TickTimers:
        ld      a,(FrameCount)
        inc     a
        ld      (FrameCount),a
        ld      a,(Changed2)
        or      CHG_FRAMECOUNT
        ld      (Changed2),a
        ld      a,(Glim_Gravity_cnt)
        dec     a
        ld      (Glim_Gravity_cnt),a
        jr      nz,__TimerNext_Gravity
        ld      a,(Gravity)       ; reload from period cell
        ld      (Glim_Gravity_cnt),a
        ld      a,1
        ld      (GravityFire),a
        ld      a,(Changed2)
        or      CHG_GRAVITYFIRE
        ld      (Changed2),a
__TimerNext_Gravity:
        ret

; --- derive phase dispatch ---
@__RunDeriveEffects:
        ld      a,(CurrentCard)
        cp      Card.Playing
        jr      nz,GlimSkip_DifficultyCurve
        ld      a,(Changed0)
        and     GlimDep_DifficultyCurve__B0
        jr      z,GlimSkip_DifficultyCurve
        call    Glim_DifficultyCurve
GlimSkip_DifficultyCurve:
        ret

; --- logic phase dispatch ---
@__RunLogicEffects:
        ld      a,(CurrentCard)
        cp      Card.Splash
        jr      nz,GlimSkip_SplashShow
        ld      a,(GlimPrevCard)
        cp      Card.Splash
        jr      z,GlimSkip_SplashShow
        ld      a,(Changed2)
        and     GlimDep_SplashShow__B2
        jr      z,GlimSkip_SplashShow
        call    Glim_SplashShow
GlimSkip_SplashShow:
        ld      a,(CurrentCard)
        cp      Card.Playing
        jr      nz,GlimSkip_StartRound
        ld      a,(GlimPrevCard)
        cp      Card.Playing
        jr      z,GlimSkip_StartRound
        ld      a,(Changed2)
        and     GlimDep_StartRound__B2
        jr      z,GlimSkip_StartRound
        call    Glim_StartRound
GlimSkip_StartRound:
        ld      a,(CurrentCard)
        ld      (GlimPrevCard),a
        ld      a,(CurrentCard)
        cp      Card.Splash
        jr      nz,GlimSkip_SplashExit
        ld      a,(Changed2)
        and     GlimDep_SplashExit__B2
        jr      z,GlimSkip_SplashExit
        call    Glim_SplashExit
GlimSkip_SplashExit:
        ld      a,(CurrentCard)
        cp      Card.Playing
        jr      nz,GlimSkip_ApplyMove
        ld      a,(Changed1)
        and     GlimDep_ApplyMove__B1
        jr      z,GlimSkip_ApplyMove
        call    Glim_ApplyMove
GlimSkip_ApplyMove:
        ld      a,(CurrentCard)
        cp      Card.Playing
        jr      nz,GlimSkip_ApplyRotate
        ld      a,(Changed1)
        and     GlimDep_ApplyRotate__B1
        jr      z,GlimSkip_ApplyRotate
        call    Glim_ApplyRotate
GlimSkip_ApplyRotate:
        ld      a,(CurrentCard)
        cp      Card.Playing
        jr      nz,GlimSkip_ApplyGravity
        ld      a,(Changed1)
        and     GlimDep_ApplyGravity__B1
        jr      nz,GlimRun_ApplyGravity
        ld      a,(Changed2)
        and     GlimDep_ApplyGravity__B2
        jr      nz,GlimRun_ApplyGravity
        jr      GlimSkip_ApplyGravity
GlimRun_ApplyGravity:
        call    Glim_ApplyGravity
GlimSkip_ApplyGravity:
        ld      a,(CurrentCard)
        cp      Card.Playing
        jr      nz,GlimSkip_Pause
        ld      a,(Changed1)
        and     GlimDep_Pause__B1
        jr      z,GlimSkip_Pause
        call    Glim_Pause
GlimSkip_Pause:
        ld      a,(CurrentCard)
        cp      Card.Paused
        jr      nz,GlimSkip_Unpause
        ld      a,(Changed1)
        and     GlimDep_Unpause__B1
        jr      z,GlimSkip_Unpause
        call    Glim_Unpause
GlimSkip_Unpause:
        ld      a,(CurrentCard)
        cp      Card.GameOver
        jr      nz,GlimSkip_Restart
        ld      a,(Changed2)
        and     GlimDep_Restart__B2
        jr      z,GlimSkip_Restart
        call    Glim_Restart
GlimSkip_Restart:
        ret

; --- render phase dispatch ---
@__RunRenderEffects:
        ld      a,(CurrentCard)
        cp      Card.Splash
        jr      nz,GlimSkip_SplashTwinkle
        ld      a,(Changed2)
        and     GlimDep_SplashTwinkle__B2
        jr      z,GlimSkip_SplashTwinkle
        call    Glim_SplashTwinkle
GlimSkip_SplashTwinkle:
        ld      a,(CurrentCard)
        cp      Card.Playing
        jr      nz,GlimSkip_DrawBoard
        ld      a,(Changed0)
        and     GlimDep_DrawBoard__B0
        jr      z,GlimSkip_DrawBoard
        call    Glim_DrawBoard
GlimSkip_DrawBoard:
        ld      a,(CurrentCard)
        cp      Card.Playing
        jr      nz,GlimSkip_DrawScore
        ld      a,(Changed0)
        and     GlimDep_DrawScore__B0
        jr      z,GlimSkip_DrawScore
        call    Glim_DrawScore
GlimSkip_DrawScore:
        ld      a,(CurrentCard)
        cp      Card.GameOver
        jr      nz,GlimSkip_GameOverPulse
        ld      a,(Changed2)
        and     GlimDep_GameOverPulse__B2
        jr      z,GlimSkip_GameOverPulse
        call    Glim_GameOverPulse
GlimSkip_GameOverPulse:
        ret

; --- phase boundary: deliver same-frame raises ---
@__MergeRaised:
        ld      a,(Changed0)
        ld      b,a
        ld      a,(Raised0)
        or      b
        ld      (Changed0),a
        ld      a,(Changed1)
        ld      b,a
        ld      a,(Raised1)
        or      b
        ld      (Changed1),a
        ld      a,(Changed2)
        ld      b,a
        ld      a,(Raised2)
        or      b
        ld      (Changed2),a
        xor     a
        ld      (Raised0),a
        ld      (Raised1),a
        ld      (Raised2),a
        ret

; --- enter block SplashShow ---
@Glim_SplashShow:
    call FbClear
    call HudBlankDig
        ret

; --- render block SplashTwinkle ---
@Glim_SplashTwinkle:
    ; one random pixel per frame, wiped every 64 frames
    ld a,(FrameCount)
    and %00111111
    call z,FbClear
    ld c,ApiRandom
    rst $10             ; A = random byte
    ld e,a
    and %00000111
    ld b,a              ; column
    ld a,e
    rrca
    rrca
    rrca
    and %00000111
    ld c,a              ; row
    ld a,e
    rrca
    rrca
    and %00000111
    jr nz,_color
    ld a,COLOR_CYAN     ; colour 0 would be an invisible twinkle
_color:
    call FbPlot
        ret

; --- logic block SplashExit ---
@Glim_SplashExit:
        ld      a,Card.Playing      ; goto Playing
        ld      (CurrentCard),a
        ld      a,(Next2)            ; a consumer already ran: defer to next frame
        or      CHG_CURRENTCARD
        ld      (Next2),a
        ret

; --- enter block StartRound ---
@Glim_StartRound:
    call InitGame
    call SpawnPiece      ; empty board: the spawn probe cannot block
        ld      a,(Raised0)          ; deliver to later phases this frame
        or      CHG_BOARDROWS + CHG_PLAYERX + CHG_PLAYERY + CHG_CURPIECEINDEX + CHG_CURROTATION + CHG_NEXTPIECEINDEX + CHG_LINESCLEARED
        ld      (Raised0),a
        ld      a,(Raised1)          ; deliver to later phases this frame
        or      CHG_BOARDRED + CHG_BOARDGREEN + CHG_BOARDBLUE
        ld      (Raised1),a
        ld      a,(Next0)            ; a consumer already ran: defer to next frame
        or      CHG_SCORE
        ld      (Next0),a
        ret

; --- logic block ApplyMove ---
@Glim_ApplyMove:
    ld a,(PlayerX)
    ld d,a
    ld a,(MoveLeftP)
    or a
    jr z,_right
    dec d                ; left
    jr _probe
_right:
    inc d
_probe:
    ld a,d
    cp 8                 ; underflow wraps past 8 too (unsigned)
    jr nc,_done
    ld a,(PlayerY)
    ld e,a
    call CheckCollAt
    jr c,_done
    ld a,d
    ld (PlayerX),a
_done:
        ld      a,(Raised0)          ; deliver to later phases this frame
        or      CHG_PLAYERX
        ld      (Raised0),a
        ret

; --- logic block ApplyRotate ---
@Glim_ApplyRotate:
    ld a,(CurRotation)
    ld b,a               ; keep the old rotation for the revert
    inc a
    and %00000011
    ld (CurRotation),a
    push bc
    call SetCurPiece
    pop bc
    ld a,(PlayerX)
    ld d,a
    ld a,(PlayerY)
    ld e,a
    call CheckCollAt
    jr nc,_ok
    ld a,b               ; blocked: restore the old rotation
    ld (CurRotation),a
    call SetCurPiece
    jr _done
_ok:
    call Snd_Rotate
_done:
        ld      a,(Raised0)          ; deliver to later phases this frame
        or      CHG_CURROTATION
        ld      (Raised0),a
        ret

; --- logic block ApplyGravity ---
@Glim_ApplyGravity:
    ld a,(PlayerX)
    ld d,a
    ld a,(PlayerY)
    inc a
    ld e,a
    call CheckCollAt
    jr c,_lock
    ld a,e               ; free: descend
    ld (PlayerY),a
    jp _done
_lock:
    call LockPiece
    call Snd_Lock
    call ClearFullRows   ; A = rows cleared
    or a
    jr z,_spawn
    ld b,a
    ld a,(LinesCleared)
    add a,b
    ld (LinesCleared),a
    ld a,b
    call ScoreForClears  ; DE = delta
    ld hl,(Score)
    add hl,de
    ld (Score),hl
    call Snd_Clear
_spawn:
    call SpawnPiece
    jr nc,_done          ; spawn blocked: the stack reached the top
    ; conditional navigation: goto is unconditional once a block runs,
    ; so a conditional transition writes CurrentCard directly (declared
    ; in updates). Enter blocks are edge-triggered, so the every-run
    ; change mark cannot re-run them.
    ld a,Card.GameOver
    ld (CurrentCard),a
    call Snd_Over
_done:
        ld      a,(Raised0)          ; deliver to later phases this frame
        or      CHG_PLAYERY + CHG_BOARDROWS + CHG_LINESCLEARED + CHG_PLAYERX + CHG_CURPIECEINDEX + CHG_CURROTATION + CHG_NEXTPIECEINDEX
        ld      (Raised0),a
        ld      a,(Raised1)          ; deliver to later phases this frame
        or      CHG_BOARDRED + CHG_BOARDGREEN + CHG_BOARDBLUE
        ld      (Raised1),a
        ld      a,(Next0)            ; a consumer already ran: defer to next frame
        or      CHG_SCORE
        ld      (Next0),a
        ld      a,(Next2)            ; a consumer already ran: defer to next frame
        or      CHG_CURRENTCARD
        ld      (Next2),a
        ret

; --- derive block DifficultyCurve ---
@Glim_DifficultyCurve:
    ld hl,(Score)
    ld de,2000
    or a
    sbc hl,de
    jr c,_keep
    ld a,16              ; past 2000: twice the pace
    ld (Gravity),a
_keep:
        ret

; --- logic block Pause ---
@Glim_Pause:
        ld      a,Card.Paused      ; goto Paused
        ld      (CurrentCard),a
        ld      a,(Next2)            ; a consumer already ran: defer to next frame
        or      CHG_CURRENTCARD
        ld      (Next2),a
        ret

; --- render block DrawBoard ---
@Glim_DrawBoard:
    call DrawBoardFb
        ret

; --- render block DrawScore ---
@Glim_DrawScore:
    ld hl,(Score)
    call HudWriteU16
        ret

; --- logic block Unpause ---
@Glim_Unpause:
        ld      a,Card.Playing      ; goto Playing
        ld      (CurrentCard),a
        ld      a,(Next2)            ; a consumer already ran: defer to next frame
        or      CHG_CURRENTCARD
        ld      (Next2),a
        ret

; --- render block GameOverPulse ---
@Glim_GameOverPulse:
    ; dim red heartbeat over the final board: repaint the board, then
    ; overlay the top row in red on alternating half-second beats
    call DrawBoardFb
    ld a,(FrameCount)
    and %00010000
    jr z,_done
    ld hl,Framebuffer    ; row 0 red byte
    ld (hl),$FF
_done:
        ret

; --- logic block Restart ---
@Glim_Restart:
        ld      a,Card.Splash      ; goto Splash
        ld      (CurrentCard),a
        ld      a,(Next2)            ; a consumer already ran: defer to next frame
        or      CHG_CURRENTCARD
        ld      (Next2),a
        ret

; --- frame rollover ---
@__EndFrame:
        xor     a
        ld      (MoveLeftP),a
        ld      (MoveRightP),a
        ld      (SoftDropP),a
        ld      (RotateP),a
        ld      (PauseP),a
        ld      (StartP),a
        ld      (GravityFire),a
        ld      (Raised0),a
        ld      (Raised1),a
        ld      (Raised2),a
        ld      a,(Next0)            ; deferred raises become next frame
        ld      (Changed0),a
        ld      a,(Next1)            ; deferred raises become next frame
        ld      (Changed1),a
        ld      a,(Next2)            ; deferred raises become next frame
        ld      (Changed2),a
        xor     a
        ld      (Next0),a
        ld      (Next1),a
        ld      (Next2),a
        ret

; --- imported AZM modules ---
; Import names resolve program-wide; bytes land here, outside
; every execution path. @ labels are the modules' public API.
        .import "tetro-lib.asm"

; --- sound cues ---
; Non-blocking matrix-profile cues. len is row ticks; div is the
; speaker divider. Starting a cue replaces the currently active cue.
@Snd_Rotate:
        ld      a,24
        ld      c,2
        jp      SndStart

@Snd_Lock:
        ld      a,32
        ld      c,4
        jp      SndStart

@Snd_Clear:
        ld      a,72
        ld      c,2
        jp      SndStart

@Snd_Over:
        ld      a,232
        ld      c,8
        jp      SndStart


; --- matrix8x8 profile library ---

; Scan all 8 rows with fixed dwell, then blank the matrix so
; block work never changes visible row brightness. Sound and the
; seven-segment HUD are serviced once per row (8 ticks per frame).
;! clobbers  A,BC,DE,HL
@ScanFrame:
        ld      hl,Framebuffer
        ld      c,%00000001          ; row select mask
ScanFrameRow:
        xor     a
        out     (PortRow),a          ; blank before changing colour data
        ld      a,(hl)
        out     (PortRed),a
        inc     hl
        ld      a,(hl)
        out     (PortGreen),a
        inc     hl
        ld      a,(hl)
        out     (PortBlue),a
        inc     hl
        inc     hl                   ; skip aux byte
        ld      a,c
        out     (PortRow),a          ; enable row
        push    bc
        push    hl
        call    SndService
        call    HudScanDig
        pop     hl
        pop     bc
        ld      b,ScanDwellPeriod
ScanFrameDwell:
        djnz    ScanFrameDwell
        rlc     c
        jr      nc,ScanFrameRow      ; carry after 8th rotate
        xor     a
        out     (PortRow),a          ; matrix blank on return
        ret

; Convert x (0-7, 0 = leftmost) to the matrix bit convention.
;! in A; out A; clobbers B
@MxMask:
        or      a
        ld      b,a
        ld      a,%10000000
        ret     z
MxMaskLp:
        srl     a
        djnz    MxMaskLp
        ret

; Set one pixel. B = x (0-7), C = y (0-7), A = colour bits
; (COLOR_RED/GREEN/BLUE, OR-combined). ORs into the framebuffer.
;! in A,B,C; clobbers A,B,DE,HL
@FbPlot:
        ld      d,a                  ; D = colour bits
        ld      a,c
        add     a,a
        add     a,a                  ; y * 4
        ld      e,a
        ld      a,b
        call    MxMask               ; A = pixel mask
        ld      b,a
        ld      hl,Framebuffer
        ld      a,l
        add     a,e
        ld      l,a
        ld      a,h
        adc     a,0
        ld      h,a
        srl     d
        jr      nc,FbPlotGrn
        ld      a,(hl)
        or      b
        ld      (hl),a
FbPlotGrn:
        inc     hl
        srl     d
        jr      nc,FbPlotBlu
        ld      a,(hl)
        or      b
        ld      (hl),a
FbPlotBlu:
        inc     hl
        srl     d
        ret     nc
        ld      a,(hl)
        or      b
        ld      (hl),a
        ret

; Clear the whole framebuffer.
;! clobbers  A,B,HL
@FbClear:
        ld      hl,Framebuffer
        ld      b,32
        xor     a
FbClearLp:
        ld      (hl),a
        inc     hl
        djnz    FbClearLp
        ret

; (Re)start a sound cue. A = duration in row ticks (8 per frame),
; C = divider half-period; smaller is higher pitch.
;! in A,C; clobbers A
@SndStart:
        ld      (SoundTimer),a
        ld      a,c
        ld      (SndDivReload),a
        ld      (SndDivCount),a
        xor     a
        ld      (SpeakerPort),a
        ret

; Tick the speaker state machine once per row scan.
;! clobbers A
@SndService:
        ld      a,(SoundTimer)
        or      a
        ret     z
        dec     a
        ld      (SoundTimer),a
        jr      nz,SndActive
        xor     a
        ld      (SpeakerPort),a
        ld      (SndDivCount),a
        ret
SndActive:
        ld      a,(SndDivCount)
        dec     a
        ld      (SndDivCount),a
        ret     nz
        ld      a,(SndDivReload)
        ld      (SndDivCount),a
        ld      a,(SpeakerPort)
        xor     SpeakerBit
        ld      (SpeakerPort),a
        ret

; Strobe one seven-segment digit and advance the scan index.
;! clobbers A,BC,DE,HL
@HudScanDig:
        ld      a,(HudScanIndex)
        ld      c,a
        ld      a,(SpeakerPort)
        out     (PortDigits),a       ; digits off; keep speaker bit
        ld      a,c
        ld      l,a
        ld      h,0
        ld      de,HudSegBuffer
        add     hl,de
        ld      a,(hl)
        out     (PortSegs),a
        ld      a,c
        ld      l,a
        ld      h,0
        ld      de,HudMaskTbl
        add     hl,de
        ld      a,(hl)
        ld      b,a
        ld      a,(SpeakerPort)
        or      b
        out     (PortDigits),a
        ld      a,c
        inc     a
        cp      6
        jr      c,HudScanSave
        xor     a
HudScanSave:
        ld      (HudScanIndex),a
        ret

; Zero all six HUD digits.
;! clobbers A,B,HL
@HudBlankDig:
        ld      hl,HudSegBuffer
        ld      b,6
        xor     a
HudBlankLp:
        ld      (hl),a
        inc     hl
        djnz    HudBlankLp
        ret

; Encode HL as decimal into the HUD: slot 0 shows 0, slots 1-5
; the 10000..1 digits.
;! in HL; out BC,HL; clobbers A,DE
@HudWriteU16:
        ld      a,(HudGlyphTbl)
        ld      (HudSegBuffer),a
        ld      bc,HudSegBuffer + 1
        ld      de,10000
        call    HudDecDigit
        ld      de,1000
        call    HudDecDigit
        ld      de,100
        call    HudDecDigit
        ld      de,10
        call    HudDecDigit
        ld      de,1
        call    HudDecDigit
        ret

; One decimal place value: count DE out of HL, emit the glyph.
;! in HL,DE,BC; out BC,HL; clobbers A,DE
@HudDecDigit:
        xor     a
HudDecLp:
        push    af
        ld      a,h
        cp      d
        jr      c,HudDecDone
        jr      nz,HudDecSub
        ld      a,l
        cp      e
        jr      c,HudDecDone
HudDecSub:
        pop     af
        or      a
        sbc     hl,de
        inc     a
        jr      HudDecLp
HudDecDone:
        pop     af
        push    hl
        push    bc
        ld      l,a
        ld      h,0
        ld      de,HudGlyphTbl
        add     hl,de
        ld      a,(hl)
        pop     bc
        ld      (bc),a
        inc     bc
        pop     hl
        ret
"
`;

exports[`generated output snapshots > trail.glim generates byte-identical output 1`] = `
"; Generated by Glimmer from program Trail.
; Do not edit: regenerate from the Glimmer source.
;
; Register contracts (the ;! comments) are inferred and injected
; by AZM during the Glimmer build, using the same parameters
; Debug80 uses: --contracts --rc error --reg-profile mon3.

        .org    $4000

; --- TEC-1G / MON-3 platform ---
ApiScanKeys       .equ 16
ApiRandom         .equ 49   ; A = random byte, destroys B
PortDigits        .equ $01
PortSegs          .equ $02
PortRow           .equ $05
PortRed           .equ $06
PortGreen         .equ $F8
PortBlue          .equ $F9
SpeakerBit        .equ $80
ScanDwellPeriod   .equ 255
COLOR_RED         .equ $01
COLOR_GREEN       .equ $02
COLOR_BLUE        .equ $04
COLOR_YELLOW      .equ COLOR_RED + COLOR_GREEN
COLOR_CYAN        .equ COLOR_GREEN + COLOR_BLUE
COLOR_MAGENTA     .equ COLOR_RED + COLOR_BLUE
COLOR_WHITE       .equ $07

; --- MON-3 key codes ---
KEY_2             .equ $02
KEY_8             .equ $08
KEY_4             .equ $04
KEY_6             .equ $06

; --- change flags ---
CHG_DOTX_BIT      .equ 0
CHG_DOTY_BIT      .equ 1
CHG_TRAIL_BIT     .equ 2
CHG_UP_BIT        .equ 3
CHG_DOWN_BIT      .equ 4
CHG_LEFT_BIT      .equ 5
CHG_RIGHT_BIT     .equ 6
CHG_DOTX          .equ %00000001
CHG_DOTY          .equ %00000010
CHG_TRAIL         .equ %00000100
CHG_UP            .equ %00001000
CHG_DOWN          .equ %00010000
CHG_LEFT          .equ %00100000
CHG_RIGHT         .equ %01000000

; --- block trigger masks ---
GlimDep_MoveUp__B0 .equ CHG_UP
GlimDep_MoveDown__B0 .equ CHG_DOWN
GlimDep_MoveLeft__B0 .equ CHG_LEFT
GlimDep_MoveRight__B0 .equ CHG_RIGHT
GlimDep_StampTrail__B0 .equ CHG_DOTX + CHG_DOTY
GlimDep_DrawTrail__B0 .equ CHG_TRAIL + CHG_DOTX + CHG_DOTY

; --- state storage ---
DotX:             .db 3
DotY:             .db 3
Trail:            .ds 8, 0   ; byte array
Up:               .db 0
Down:             .db 0
Left:             .db 0
Right:            .db 0
Glim_HeldKey:     .db $FF
Glim_HeldCount:   .db 0
Changed0:         .db %00000111   ; flags dispatch tests
Raised0:          .db 0   ; raises for later phases this frame
Next0:            .db 0   ; raises deferred to next frame
Framebuffer:      .ds 32           ; 8 rows x R,G,B,aux
SpeakerPort:      .db 0
SoundTimer:       .db 0
SndDivReload:     .db 0
SndDivCount:      .db 0
HudScanIndex:     .db 0
HudSegBuffer:     .ds 6

; --- HUD data tables ---
HudMaskTbl:
        .db     $20, $10, $08, $04, $02, $01
HudGlyphTbl:
        .db     $EB, $28, $CD, $AD, $2E, $A7, $E7, $29
        .db     $EF, $2F, $6F, $E6, $C3, $EC, $C7, $47

; --- runtime loop ---
@Start:
        call    FbClear
        call    HudBlankDig
MainLoop:
        call    ScanFrame            ; show one full frame, then blank
        call    __PollBindings       ; game work runs in the blank window
        call    __RunLogicEffects
        call    __MergeRaised
        call    __RunRenderEffects
        call    __EndFrame
        jp      MainLoop

; --- input polling (MON-3 _scanKeys) ---
@__PollBindings:
        ld      c,ApiScanKeys
        rst     $10
        jr      z,__PollKeyDown
        ld      a,$FF                ; no key: disarm autorepeat
        ld      (Glim_HeldKey),a
        ret
__PollKeyDown:
        ld      b,a                  ; B = key code (DE unsafe: matrix kbd)
        jr      c,__PollNewPress
        ld      a,(Glim_HeldKey)     ; held: autorepeat armed for this key?
        cp      b
        ret     nz
        ld      a,(Glim_HeldCount)
        dec     a
        ld      (Glim_HeldCount),a
        ret     nz
        ld      a,b
        cp      KEY_2
        jr      nz,__HeldNext_Up_KEY_2
        ld      a,8
        ld      (Glim_HeldCount),a
        ld      a,1
        ld      (Up),a
        ld      a,(Changed0)
        or      CHG_UP
        ld      (Changed0),a
        ret
__HeldNext_Up_KEY_2:
        ld      a,b
        cp      KEY_8
        jr      nz,__HeldNext_Down_KEY_8
        ld      a,8
        ld      (Glim_HeldCount),a
        ld      a,1
        ld      (Down),a
        ld      a,(Changed0)
        or      CHG_DOWN
        ld      (Changed0),a
        ret
__HeldNext_Down_KEY_8:
        ld      a,b
        cp      KEY_4
        jr      nz,__HeldNext_Left_KEY_4
        ld      a,8
        ld      (Glim_HeldCount),a
        ld      a,1
        ld      (Left),a
        ld      a,(Changed0)
        or      CHG_LEFT
        ld      (Changed0),a
        ret
__HeldNext_Left_KEY_4:
        ld      a,b
        cp      KEY_6
        jr      nz,__HeldNext_Right_KEY_6
        ld      a,8
        ld      (Glim_HeldCount),a
        ld      a,1
        ld      (Right),a
        ld      a,(Changed0)
        or      CHG_RIGHT
        ld      (Changed0),a
        ret
__HeldNext_Right_KEY_6:
        ret
__PollNewPress:
        ld      a,b
        cp      KEY_2
        jr      nz,__NewNext_Up_KEY_2
        ld      a,b                  ; arm autorepeat
        ld      (Glim_HeldKey),a
        ld      a,8
        ld      (Glim_HeldCount),a
        ld      a,1
        ld      (Up),a
        ld      a,(Changed0)
        or      CHG_UP
        ld      (Changed0),a
        ret
__NewNext_Up_KEY_2:
        ld      a,b
        cp      KEY_8
        jr      nz,__NewNext_Down_KEY_8
        ld      a,b                  ; arm autorepeat
        ld      (Glim_HeldKey),a
        ld      a,8
        ld      (Glim_HeldCount),a
        ld      a,1
        ld      (Down),a
        ld      a,(Changed0)
        or      CHG_DOWN
        ld      (Changed0),a
        ret
__NewNext_Down_KEY_8:
        ld      a,b
        cp      KEY_4
        jr      nz,__NewNext_Left_KEY_4
        ld      a,b                  ; arm autorepeat
        ld      (Glim_HeldKey),a
        ld      a,8
        ld      (Glim_HeldCount),a
        ld      a,1
        ld      (Left),a
        ld      a,(Changed0)
        or      CHG_LEFT
        ld      (Changed0),a
        ret
__NewNext_Left_KEY_4:
        ld      a,b
        cp      KEY_6
        jr      nz,__NewNext_Right_KEY_6
        ld      a,b                  ; arm autorepeat
        ld      (Glim_HeldKey),a
        ld      a,8
        ld      (Glim_HeldCount),a
        ld      a,1
        ld      (Right),a
        ld      a,(Changed0)
        or      CHG_RIGHT
        ld      (Changed0),a
        ret
__NewNext_Right_KEY_6:
        ret

; --- logic phase dispatch ---
@__RunLogicEffects:
        ld      a,(Changed0)
        and     GlimDep_MoveUp__B0
        jr      z,GlimSkip_MoveUp
        call    Glim_MoveUp
GlimSkip_MoveUp:
        ld      a,(Changed0)
        and     GlimDep_MoveDown__B0
        jr      z,GlimSkip_MoveDown
        call    Glim_MoveDown
GlimSkip_MoveDown:
        ld      a,(Changed0)
        and     GlimDep_MoveLeft__B0
        jr      z,GlimSkip_MoveLeft
        call    Glim_MoveLeft
GlimSkip_MoveLeft:
        ld      a,(Changed0)
        and     GlimDep_MoveRight__B0
        jr      z,GlimSkip_MoveRight
        call    Glim_MoveRight
GlimSkip_MoveRight:
        ld      a,(Changed0)
        and     GlimDep_StampTrail__B0
        jr      z,GlimSkip_StampTrail
        call    Glim_StampTrail
GlimSkip_StampTrail:
        ret

; --- render phase dispatch ---
@__RunRenderEffects:
        ld      a,(Changed0)
        and     GlimDep_DrawTrail__B0
        jr      z,GlimSkip_DrawTrail
        call    Glim_DrawTrail
GlimSkip_DrawTrail:
        ret

; --- phase boundary: deliver same-frame raises ---
@__MergeRaised:
        ld      a,(Changed0)
        ld      b,a
        ld      a,(Raised0)
        or      b
        ld      (Changed0),a
        xor     a
        ld      (Raised0),a
        ret

; --- logic block MoveUp ---
@Glim_MoveUp:
    ld a,(DotY)
    or a
    jr z,_stop
    dec a
    ld (DotY),a
_stop:
        ld      a,(Next0)            ; a consumer already ran: defer to next frame
        or      CHG_DOTY
        ld      (Next0),a
        ret

; --- logic block MoveDown ---
@Glim_MoveDown:
    ld a,(DotY)
    cp 7
    jr nc,_stop
    inc a
    ld (DotY),a
_stop:
        ld      a,(Next0)            ; a consumer already ran: defer to next frame
        or      CHG_DOTY
        ld      (Next0),a
        ret

; --- logic block MoveLeft ---
@Glim_MoveLeft:
    ld a,(DotX)
    or a
    jr z,_stop
    dec a
    ld (DotX),a
_stop:
        ld      a,(Next0)            ; a consumer already ran: defer to next frame
        or      CHG_DOTX
        ld      (Next0),a
        ret

; --- logic block MoveRight ---
@Glim_MoveRight:
    ld a,(DotX)
    cp 7
    jr nc,_stop
    inc a
    ld (DotX),a
_stop:
        ld      a,(Next0)            ; a consumer already ran: defer to next frame
        or      CHG_DOTX
        ld      (Next0),a
        ret

; --- logic block StampTrail ---
@Glim_StampTrail:
    ld a,(DotX)
    call MxMask
    ld b,a
    ld a,(DotY)
    ld e,a
    ld d,0
    ld hl,Trail
    add hl,de
    ld a,(hl)
    or b
    ld (hl),a
        ld      a,(Raised0)          ; deliver to later phases this frame
        or      CHG_TRAIL
        ld      (Raised0),a
        ret

; --- render block DrawTrail ---
@Glim_DrawTrail:
    call FbClear
    ld hl,Trail
    ld de,Framebuffer + 1
    ld b,8
_copy:
    ld a,(hl)
    ld (de),a
    inc hl
    inc de
    inc de
    inc de
    inc de
    djnz _copy
    ld a,(DotX)
    ld b,a
    ld a,(DotY)
    ld c,a
    ld a,COLOR_WHITE
    call FbPlot
        ret

; --- frame rollover ---
@__EndFrame:
        xor     a
        ld      (Up),a
        ld      (Down),a
        ld      (Left),a
        ld      (Right),a
        ld      (Raised0),a
        ld      a,(Next0)            ; deferred raises become next frame
        ld      (Changed0),a
        xor     a
        ld      (Next0),a
        ret

; --- matrix8x8 profile library ---

; Scan all 8 rows with fixed dwell, then blank the matrix so
; block work never changes visible row brightness. Sound and the
; seven-segment HUD are serviced once per row (8 ticks per frame).
;! clobbers  A,BC,DE,HL
@ScanFrame:
        ld      hl,Framebuffer
        ld      c,%00000001          ; row select mask
ScanFrameRow:
        xor     a
        out     (PortRow),a          ; blank before changing colour data
        ld      a,(hl)
        out     (PortRed),a
        inc     hl
        ld      a,(hl)
        out     (PortGreen),a
        inc     hl
        ld      a,(hl)
        out     (PortBlue),a
        inc     hl
        inc     hl                   ; skip aux byte
        ld      a,c
        out     (PortRow),a          ; enable row
        push    bc
        push    hl
        call    SndService
        call    HudScanDig
        pop     hl
        pop     bc
        ld      b,ScanDwellPeriod
ScanFrameDwell:
        djnz    ScanFrameDwell
        rlc     c
        jr      nc,ScanFrameRow      ; carry after 8th rotate
        xor     a
        out     (PortRow),a          ; matrix blank on return
        ret

; Convert x (0-7, 0 = leftmost) to the matrix bit convention.
;! in A; out A; clobbers B
@MxMask:
        or      a
        ld      b,a
        ld      a,%10000000
        ret     z
MxMaskLp:
        srl     a
        djnz    MxMaskLp
        ret

; Set one pixel. B = x (0-7), C = y (0-7), A = colour bits
; (COLOR_RED/GREEN/BLUE, OR-combined). ORs into the framebuffer.
;! in A,B,C; clobbers A,B,DE,HL
@FbPlot:
        ld      d,a                  ; D = colour bits
        ld      a,c
        add     a,a
        add     a,a                  ; y * 4
        ld      e,a
        ld      a,b
        call    MxMask               ; A = pixel mask
        ld      b,a
        ld      hl,Framebuffer
        ld      a,l
        add     a,e
        ld      l,a
        ld      a,h
        adc     a,0
        ld      h,a
        srl     d
        jr      nc,FbPlotGrn
        ld      a,(hl)
        or      b
        ld      (hl),a
FbPlotGrn:
        inc     hl
        srl     d
        jr      nc,FbPlotBlu
        ld      a,(hl)
        or      b
        ld      (hl),a
FbPlotBlu:
        inc     hl
        srl     d
        ret     nc
        ld      a,(hl)
        or      b
        ld      (hl),a
        ret

; Clear the whole framebuffer.
;! clobbers  A,B,HL
@FbClear:
        ld      hl,Framebuffer
        ld      b,32
        xor     a
FbClearLp:
        ld      (hl),a
        inc     hl
        djnz    FbClearLp
        ret

; (Re)start a sound cue. A = duration in row ticks (8 per frame),
; C = divider half-period; smaller is higher pitch.
;! in A,C; clobbers A
@SndStart:
        ld      (SoundTimer),a
        ld      a,c
        ld      (SndDivReload),a
        ld      (SndDivCount),a
        xor     a
        ld      (SpeakerPort),a
        ret

; Tick the speaker state machine once per row scan.
;! clobbers A
@SndService:
        ld      a,(SoundTimer)
        or      a
        ret     z
        dec     a
        ld      (SoundTimer),a
        jr      nz,SndActive
        xor     a
        ld      (SpeakerPort),a
        ld      (SndDivCount),a
        ret
SndActive:
        ld      a,(SndDivCount)
        dec     a
        ld      (SndDivCount),a
        ret     nz
        ld      a,(SndDivReload)
        ld      (SndDivCount),a
        ld      a,(SpeakerPort)
        xor     SpeakerBit
        ld      (SpeakerPort),a
        ret

; Strobe one seven-segment digit and advance the scan index.
;! clobbers A,BC,DE,HL
@HudScanDig:
        ld      a,(HudScanIndex)
        ld      c,a
        ld      a,(SpeakerPort)
        out     (PortDigits),a       ; digits off; keep speaker bit
        ld      a,c
        ld      l,a
        ld      h,0
        ld      de,HudSegBuffer
        add     hl,de
        ld      a,(hl)
        out     (PortSegs),a
        ld      a,c
        ld      l,a
        ld      h,0
        ld      de,HudMaskTbl
        add     hl,de
        ld      a,(hl)
        ld      b,a
        ld      a,(SpeakerPort)
        or      b
        out     (PortDigits),a
        ld      a,c
        inc     a
        cp      6
        jr      c,HudScanSave
        xor     a
HudScanSave:
        ld      (HudScanIndex),a
        ret

; Zero all six HUD digits.
;! clobbers A,B,HL
@HudBlankDig:
        ld      hl,HudSegBuffer
        ld      b,6
        xor     a
HudBlankLp:
        ld      (hl),a
        inc     hl
        djnz    HudBlankLp
        ret

; Encode HL as decimal into the HUD: slot 0 shows 0, slots 1-5
; the 10000..1 digits.
;! in HL; out BC,HL; clobbers A,DE
@HudWriteU16:
        ld      a,(HudGlyphTbl)
        ld      (HudSegBuffer),a
        ld      bc,HudSegBuffer + 1
        ld      de,10000
        call    HudDecDigit
        ld      de,1000
        call    HudDecDigit
        ld      de,100
        call    HudDecDigit
        ld      de,10
        call    HudDecDigit
        ld      de,1
        call    HudDecDigit
        ret

; One decimal place value: count DE out of HL, emit the glyph.
;! in HL,DE,BC; out BC,HL; clobbers A,DE
@HudDecDigit:
        xor     a
HudDecLp:
        push    af
        ld      a,h
        cp      d
        jr      c,HudDecDone
        jr      nz,HudDecSub
        ld      a,l
        cp      e
        jr      c,HudDecDone
HudDecSub:
        pop     af
        or      a
        sbc     hl,de
        inc     a
        jr      HudDecLp
HudDecDone:
        pop     af
        push    hl
        push    bc
        ld      l,a
        ld      h,0
        ld      de,HudGlyphTbl
        add     hl,de
        ld      a,(hl)
        pop     bc
        ld      (bc),a
        inc     bc
        pop     hl
        ret
"
`;
